commit translated contents

--- a/docs/docs-ref-autogen/excel/excel.functionresult.yml
+++ b/docs/docs-ref-autogen/excel/excel.functionresult.yml
@@ -1,158 +1,146 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 02a2c5e825cafdfd2bdfd51afcd773e36a0a6cae
-ms.sourcegitcommit: d356f1545c328d4b59ce814fcab8191e4231f1dc
-ms.translationtype: MT
-ms.contentlocale: zh-CN
-ms.lasthandoff: 02/13/2019
-ms.locfileid: "29975156"
 items:
-- uid: excel.Excel.FunctionResult
-  summary: >-
-    一个包含函数计算操作的结果的对象
+  - uid: excel.Excel.FunctionResult
+    summary: |-
+      包含函数求值操作的结果的对象
 
+      \[[API 集: ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    name: Excel.FunctionResult
+    fullName: Excel.FunctionResult
+    langs:
+      - typeScript
+    type: class
+    extends:
+      - office.OfficeExtension.ClientObject
+    package: excel
+    children:
+      - excel.Excel.FunctionResult.context
+      - excel.Excel.FunctionResult.error
+      - excel.Excel.FunctionResult.load
+      - excel.Excel.FunctionResult.load_1
+      - excel.Excel.FunctionResult.load_2
+      - excel.Excel.FunctionResult.toJSON
+      - excel.Excel.FunctionResult.value
+  - uid: excel.Excel.FunctionResult.context
+    summary: 与该对象关联的请求上下文。 这会将加载项的进程连接到 Office 主机应用程序的进程。
+    name: context
+    fullName: context
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'context: RequestContext;'
+      return:
+        type:
+          - RequestContext
+  - uid: excel.Excel.FunctionResult.error
+    summary: |-
+      表示错误的错误值 (\#如 "DIV/0")。 如果未设置错误字符串, 则函数成功, 并将其结果写入值字段。 该错误始终位于英语区域设置中。
 
-    \[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-  name: Excel.FunctionResult
-  fullName: Excel.FunctionResult
-  langs:
-  - typeScript
-  type: class
-  extends:
-  - office.OfficeExtension.ClientObject
-  package: excel
-  children:
-  - excel.Excel.FunctionResult.context
-  - excel.Excel.FunctionResult.error
-  - excel.Excel.FunctionResult.load
-  - excel.Excel.FunctionResult.load_1
-  - excel.Excel.FunctionResult.load_2
-  - excel.Excel.FunctionResult.toJSON
-  - excel.Excel.FunctionResult.value
-- uid: excel.Excel.FunctionResult.context
-  summary: 与对象关联的请求上下文。 这将连接到 Office 主机应用程序的过程外接程序的过程。
-  name: context
-  fullName: context
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'context: RequestContext;'
-    return:
-      type:
-      - RequestContext
-- uid: excel.Excel.FunctionResult.error
-  summary: >-
-    错误值 (如"\#DIV/0") 表示错误。 如果未设置错误字符串，然后函数成功，并且其结果写入到值字段。 错误始终是英语区域设置。
+      \[[API 集: ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    name: error
+    fullName: error
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'readonly error: string;'
+      return:
+        type:
+          - string
+  - uid: excel.Excel.FunctionResult.load
+    summary: 将命令加入队列以加载对象的指定属性。 在读取属性之前，你必须调用“context.sync()”。
+    remarks: |-
+      除了此签名之外, 此方法还具有以下签名:
 
+      `load(option?: string | string[]): FunctionResult<T>`-Where 选项是一个逗号分隔的字符串或一个字符串数组, 用于指定要加载的属性。
 
-    \[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-  name: error
-  fullName: error
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'readonly error: string;'
-    return:
-      type:
-      - string
-- uid: excel.Excel.FunctionResult.load
-  summary: 队列设置命令加载指定的对象的属性。 读取属性之前，必须调用"context.sync()"。
-  remarks: >-
-    除了此签名，此方法具有以下签名：
+      `load(option?: { select?: string; expand?: string; }): FunctionResult<T>`-Where 选项。选择是一个用逗号分隔的字符串, 用于指定要加载的属性和选项。 expand 是一个用逗号分隔的字符串, 用于指定要加载的导航属性。
 
-
-    `load(option?: string | string[]): FunctionResult<T>`-其中选项是一个以逗号分隔的字符串或一个指定要加载的属性的字符串数组。
-
-
-    `load(option?: { select?: string; expand?: string; }): FunctionResult<T>`-其中 option.select 是一个以逗号分隔的字符串，指定要加载的属性，options.expand 是一个以逗号分隔的字符串，指定要加载的导航属性。
-
-
-    `load(option?: { select?: string; expand?: string; top?: number; skip?: number }): FunctionResult<T>`-仅可对集合的类型。 它是类似于前一个签名。 Option.top 指定集合项可在结果中包含的最大数目。 Option.skip 指定要跳过和结果中不包含的项的数目。 如果指定 option.top，则将跳过指定的数目的项后启动结果集。
-  name: load(option)
-  fullName: load(option)
-  langs:
-  - typeScript
-  type: method
-  syntax:
-    content: 'load(option?: Excel.Interfaces.FunctionResultLoadOptions): FunctionResult<T>;'
-    return:
-      type:
-      - FunctionResult<T>
-      description: ''
-    parameters:
-    - id: option
-      description: ''
-      type:
-      - excel.Excel.Interfaces.FunctionResultLoadOptions
-- uid: excel.Excel.FunctionResult.load_1
-  name: load(option)
-  fullName: load(option)
-  langs:
-  - typeScript
-  type: method
-  syntax:
-    content: 'load(option?: string | string[]): FunctionResult<T>;'
-    return:
-      type:
-      - FunctionResult<T>
-      description: ''
-    parameters:
-    - id: option
-      description: ''
-      type:
-      - string | string[]
-- uid: excel.Excel.FunctionResult.load_2
-  name: load(option)
-  fullName: load(option)
-  langs:
-  - typeScript
-  type: method
-  syntax:
-    content: >-
-      load(option?: {
-                  select?: string;
-                  expand?: string;
-              }): FunctionResult<T>;
-    return:
-      type:
-      - FunctionResult<T>
-      description: ''
-    parameters:
-    - id: option
-      description: ''
-      type:
-      - >-
-        {
+      `load(option?: { select?: string; expand?: string; top?: number; skip?: number }): FunctionResult<T>`-仅适用于集合类型。 它类似于前面的签名。 top 指定结果中可包含的集合项的最大数量。 选项。 skip 指定要跳过且不包含在结果中的项目数。 如果指定了 top 选项, 则在跳过指定数目的项目后将启动结果集。
+    name: load(option)
+    fullName: load(option)
+    langs:
+      - typeScript
+    type: method
+    syntax:
+      content: 'load(option?: Excel.Interfaces.FunctionResultLoadOptions): FunctionResult<T>;'
+      return:
+        type:
+          - FunctionResult<T>
+        description: ''
+      parameters:
+        - id: option
+          description: ''
+          type:
+            - excel.Excel.Interfaces.FunctionResultLoadOptions
+  - uid: excel.Excel.FunctionResult.load_1
+    name: load(option)
+    fullName: load(option)
+    langs:
+      - typeScript
+    type: method
+    syntax:
+      content: 'load(option?: string | string[]): FunctionResult<T>;'
+      return:
+        type:
+          - FunctionResult<T>
+        description: ''
+      parameters:
+        - id: option
+          description: ''
+          type:
+            - 'string | string[]'
+  - uid: excel.Excel.FunctionResult.load_2
+    name: load(option)
+    fullName: load(option)
+    langs:
+      - typeScript
+    type: method
+    syntax:
+      content: |-
+        load(option?: {
                     select?: string;
                     expand?: string;
-                }
-- uid: excel.Excel.FunctionResult.toJSON
-  summary: 重写 JavaScript`toJSON()`方法，为了提供更多有用的输出时 API 对象传递给`JSON.stringify()` <!-- -->。 (`JSON.stringify`<!-- -->，反过来，调用`toJSON`对象传递给它的方法。)而原始 FunctionResult<T>对象是 API 对象，`toJSON`方法返回一个普通的 JavaScript 对象 (类型为`Interfaces.FunctionResultData<T>` <!-- -->)，其中包含原始对象中的任何加载的子属性的浅表副本。
-  name: toJSON()
-  fullName: toJSON()
-  langs:
-  - typeScript
-  type: method
-  syntax:
-    content: 'toJSON(): Interfaces.FunctionResultData<T>;'
-    return:
-      type:
-      - Interfaces.FunctionResultData<T>
-      description: ''
-- uid: excel.Excel.FunctionResult.value
-  summary: >-
-    函数计算的值。 仅当不发生错误，则将填充值字段 （即未设置错误属性）。
+                }): FunctionResult<T>;
+      return:
+        type:
+          - FunctionResult<T>
+        description: ''
+      parameters:
+        - id: option
+          description: ''
+          type:
+            - |-
+              {
+                          select?: string;
+                          expand?: string;
+                      }
+  - uid: excel.Excel.FunctionResult.toJSON
+    summary: '重写 JavaScript `toJSON()`方法, 以便在将 API 对象传递到时提供更有用的输出`JSON.stringify()`<!-- -->. (`JSON.stringify`<!-- -->反过来, 也会调用传递`toJSON`给它的对象的方法。尽管原始 FunctionResult<T>对象是 API 对象, 但`toJSON`方法返回一个无格式的 JavaScript 对象 (类型为`Interfaces.FunctionResultData<T>`<!-- -->), 其中包含原始对象中所有已加载的子属性的浅表副本。'
+    name: toJSON()
+    fullName: toJSON()
+    langs:
+      - typeScript
+    type: method
+    syntax:
+      content: 'toJSON(): Interfaces.FunctionResultData<T>;'
+      return:
+        type:
+          - Interfaces.FunctionResultData<T>
+        description: ''
+  - uid: excel.Excel.FunctionResult.value
+    summary: |-
+      函数计算的值。 仅当未发生错误 (即, 未设置 error 属性) 时, 才会填充 "值" 字段。
 
-
-    \[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-  name: value
-  fullName: value
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'readonly value: T;'
-    return:
-      type:
-      - T
+      \[[API 集: ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    name: value
+    fullName: value
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'readonly value: T;'
+      return:
+        type:
+          - T
