--- a/docs/docs-ref-autogen/excel/excel.interfaces.textrangedata.yml
+++ b/docs/docs-ref-autogen/excel/excel.interfaces.textrangedata.yml
@@ -1,53 +1,45 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 79d39759e29f7caa1398186b6873ce540ba83ebc
-ms.sourcegitcommit: e9bfba6ec767e9d34fd1cf7b38c30f689617900a
-ms.translationtype: MT
-ms.contentlocale: zh-CN
-ms.lasthandoff: 02/20/2019
-ms.locfileid: "30112739"
 items:
-- uid: excel.Excel.Interfaces.TextRangeData
-  summary: 描述通过调用 "toJSON ()" 返回的数据的接口。
-  name: Excel.Interfaces.TextRangeData
-  fullName: Excel.Interfaces.TextRangeData
-  langs:
-  - typeScript
-  type: interface
-  package: excel
-  children:
-  - excel.Excel.Interfaces.TextRangeData.font
-  - excel.Excel.Interfaces.TextRangeData.text
-- uid: excel.Excel.Interfaces.TextRangeData.font
-  summary: >-
-    返回一个 ShapeFont 对象, 该对象代表文字范围的字体属性。 只读。
+  - uid: excel.Excel.Interfaces.TextRangeData
+    summary: 描述通过调用 "toJSON ()" 返回的数据的接口。
+    name: Excel.Interfaces.TextRangeData
+    fullName: Excel.Interfaces.TextRangeData
+    langs:
+      - typeScript
+    type: interface
+    package: excel
+    children:
+      - excel.Excel.Interfaces.TextRangeData.font
+      - excel.Excel.Interfaces.TextRangeData.text
+  - uid: excel.Excel.Interfaces.TextRangeData.font
+    summary: |-
+      返回一个 ShapeFont 对象，该对象表示文本范围的字体属性。 只读。
 
+      \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    isPreview: true
+    name: font
+    fullName: font
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'font?: Excel.Interfaces.ShapeFontData;'
+      return:
+        type:
+          - excel.Excel.Interfaces.ShapeFontData
+  - uid: excel.Excel.Interfaces.TextRangeData.text
+    summary: |-
+      表示文本范围的纯文本内容。
 
-    \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-  isPreview: true
-  name: font
-  fullName: font
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'font?: Excel.Interfaces.ShapeFontData;'
-    return:
-      type:
-      - excel.Excel.Interfaces.ShapeFontData
-- uid: excel.Excel.Interfaces.TextRangeData.text
-  summary: >-
-    代表文本范围的纯文本内容。
-
-
-    \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-  isPreview: true
-  name: text
-  fullName: text
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'text?: string;'
-    return:
-      type:
-      - string
+      \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    isPreview: true
+    name: text
+    fullName: text
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'text?: string;'
+      return:
+        type:
+          - string
