--- a/docs/docs-ref-autogen/excel_release/excel.interfaces.chartlegendentryloadoptions.yml
+++ b/docs/docs-ref-autogen/excel_release/excel.interfaces.chartlegendentryloadoptions.yml
@@ -1,135 +1,122 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 3a36d807b699b6caa8f07530a3c654c2136e6532
-ms.sourcegitcommit: e9bfba6ec767e9d34fd1cf7b38c30f689617900a
-ms.translationtype: MT
-ms.contentlocale: zh-CN
-ms.lasthandoff: 02/20/2019
-ms.locfileid: "30115672"
 items:
-- uid: excel_release.Excel.Interfaces.ChartLegendEntryLoadOptions
-  summary: >-
-    表示 legendEntryCollection 中的 legendEntry。
+  - uid: excel_release.Excel.Interfaces.ChartLegendEntryLoadOptions
+    summary: |-
+      表示 legendEntryCollection 中的 legendEntry。
 
+      \[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    name: Excel.Interfaces.ChartLegendEntryLoadOptions
+    fullName: Excel.Interfaces.ChartLegendEntryLoadOptions
+    langs:
+      - typeScript
+    type: interface
+    package: excel_release
+    children:
+      - excel_release.Excel.Interfaces.ChartLegendEntryLoadOptions.$all
+      - excel_release.Excel.Interfaces.ChartLegendEntryLoadOptions.height
+      - excel_release.Excel.Interfaces.ChartLegendEntryLoadOptions.index
+      - excel_release.Excel.Interfaces.ChartLegendEntryLoadOptions.left
+      - excel_release.Excel.Interfaces.ChartLegendEntryLoadOptions.top
+      - excel_release.Excel.Interfaces.ChartLegendEntryLoadOptions.visible
+      - excel_release.Excel.Interfaces.ChartLegendEntryLoadOptions.width
+  - uid: excel_release.Excel.Interfaces.ChartLegendEntryLoadOptions.$all
+    name: $all
+    fullName: $all
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: '$all?: boolean;'
+      return:
+        type:
+          - boolean
+  - uid: excel_release.Excel.Interfaces.ChartLegendEntryLoadOptions.height
+    summary: |-
+      表示图表图例上的 legendEntry 的高度。
 
-    \[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-  name: Excel.Interfaces.ChartLegendEntryLoadOptions
-  fullName: Excel.Interfaces.ChartLegendEntryLoadOptions
-  langs:
-  - typeScript
-  type: interface
-  package: excel_release
-  children:
-  - excel_release.Excel.Interfaces.ChartLegendEntryLoadOptions.$all
-  - excel_release.Excel.Interfaces.ChartLegendEntryLoadOptions.height
-  - excel_release.Excel.Interfaces.ChartLegendEntryLoadOptions.index
-  - excel_release.Excel.Interfaces.ChartLegendEntryLoadOptions.left
-  - excel_release.Excel.Interfaces.ChartLegendEntryLoadOptions.top
-  - excel_release.Excel.Interfaces.ChartLegendEntryLoadOptions.visible
-  - excel_release.Excel.Interfaces.ChartLegendEntryLoadOptions.width
-- uid: excel_release.Excel.Interfaces.ChartLegendEntryLoadOptions.$all
-  name: $all
-  fullName: $all
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: '$all?: boolean;'
-    return:
-      type:
-      - boolean
-- uid: excel_release.Excel.Interfaces.ChartLegendEntryLoadOptions.height
-  summary: >-
-    表示图表图例上的 legendEntry 的高度。
+      \[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    name: height
+    fullName: height
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'height?: boolean;'
+      return:
+        type:
+          - boolean
+  - uid: excel_release.Excel.Interfaces.ChartLegendEntryLoadOptions.index
+    summary: |-
+      表示图表图例中的 legendEntry 的索引。
 
+      \[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    name: index
+    fullName: index
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'index?: boolean;'
+      return:
+        type:
+          - boolean
+  - uid: excel_release.Excel.Interfaces.ChartLegendEntryLoadOptions.left
+    summary: |-
+      表示图表 legendEntry 的左侧。
 
-    \[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-  name: height
-  fullName: height
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'height?: boolean;'
-    return:
-      type:
-      - boolean
-- uid: excel_release.Excel.Interfaces.ChartLegendEntryLoadOptions.index
-  summary: >-
-    表示图表图例中的 legendEntry 的索引。
+      \[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    name: left
+    fullName: left
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'left?: boolean;'
+      return:
+        type:
+          - boolean
+  - uid: excel_release.Excel.Interfaces.ChartLegendEntryLoadOptions.top
+    summary: |-
+      表示图表 legendEntry 的顶部。
 
+      \[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    name: top
+    fullName: top
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'top?: boolean;'
+      return:
+        type:
+          - boolean
+  - uid: excel_release.Excel.Interfaces.ChartLegendEntryLoadOptions.visible
+    summary: |-
+      表示图表图例条目可见。
 
-    \[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-  name: index
-  fullName: index
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'index?: boolean;'
-    return:
-      type:
-      - boolean
-- uid: excel_release.Excel.Interfaces.ChartLegendEntryLoadOptions.left
-  summary: >-
-    表示图表 legendEntry 的左侧。
+      \[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    name: visible
+    fullName: visible
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'visible?: boolean;'
+      return:
+        type:
+          - boolean
+  - uid: excel_release.Excel.Interfaces.ChartLegendEntryLoadOptions.width
+    summary: |-
+      表示图表图例上的 legendEntry 的宽度。
 
-
-    \[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-  name: left
-  fullName: left
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'left?: boolean;'
-    return:
-      type:
-      - boolean
-- uid: excel_release.Excel.Interfaces.ChartLegendEntryLoadOptions.top
-  summary: >-
-    表示图表 legendEntry 的顶部。
-
-
-    \[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-  name: top
-  fullName: top
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'top?: boolean;'
-    return:
-      type:
-      - boolean
-- uid: excel_release.Excel.Interfaces.ChartLegendEntryLoadOptions.visible
-  summary: >-
-    表示图表图例条目可见。
-
-
-    \[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-  name: visible
-  fullName: visible
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'visible?: boolean;'
-    return:
-      type:
-      - boolean
-- uid: excel_release.Excel.Interfaces.ChartLegendEntryLoadOptions.width
-  summary: >-
-    表示图表图例上的 legendEntry 的宽度。
-
-
-    \[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-  name: width
-  fullName: width
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'width?: boolean;'
-    return:
-      type:
-      - boolean
+      \[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    name: width
+    fullName: width
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'width?: boolean;'
+      return:
+        type:
+          - boolean
