--- a/docs/docs-ref-autogen/excel_release/excel.interfaces.charttrendlinelabelformatupdatedata.yml
+++ b/docs/docs-ref-autogen/excel_release/excel.interfaces.charttrendlinelabelformatupdatedata.yml
@@ -1,51 +1,43 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 0345aa13d732554d3aaf19989c926265e4fdd4b0
-ms.sourcegitcommit: e9bfba6ec767e9d34fd1cf7b38c30f689617900a
-ms.translationtype: MT
-ms.contentlocale: zh-CN
-ms.lasthandoff: 02/20/2019
-ms.locfileid: "30114608"
 items:
-- uid: excel_release.Excel.Interfaces.ChartTrendlineLabelFormatUpdateData
-  summary: 用于更新 ChartTrendlineLabelFormat 对象上的数据的接口, 用于在 "ChartTrendlineLabelFormat" 中使用 (<!-- -->{...}<!-- -->)".
-  name: Excel.Interfaces.ChartTrendlineLabelFormatUpdateData
-  fullName: Excel.Interfaces.ChartTrendlineLabelFormatUpdateData
-  langs:
-  - typeScript
-  type: interface
-  package: excel_release
-  children:
-  - excel_release.Excel.Interfaces.ChartTrendlineLabelFormatUpdateData.border
-  - excel_release.Excel.Interfaces.ChartTrendlineLabelFormatUpdateData.font
-- uid: excel_release.Excel.Interfaces.ChartTrendlineLabelFormatUpdateData.border
-  summary: >-
-    表示边框格式，包括颜色、线条样式和粗细。
+  - uid: excel_release.Excel.Interfaces.ChartTrendlineLabelFormatUpdateData
+    summary: '一个用于更新 ChartTrendlineLabelFormat 对象上的数据的接口, 可用于 "ChartTrendlineLabelFormat (<!-- -->{ ... }<!-- -->)".'
+    name: Excel.Interfaces.ChartTrendlineLabelFormatUpdateData
+    fullName: Excel.Interfaces.ChartTrendlineLabelFormatUpdateData
+    langs:
+      - typeScript
+    type: interface
+    package: excel_release
+    children:
+      - excel_release.Excel.Interfaces.ChartTrendlineLabelFormatUpdateData.border
+      - excel_release.Excel.Interfaces.ChartTrendlineLabelFormatUpdateData.font
+  - uid: excel_release.Excel.Interfaces.ChartTrendlineLabelFormatUpdateData.border
+    summary: |-
+      表示边框格式，包括颜色、线条样式和粗细。
 
+      \[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    name: border
+    fullName: border
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'border?: Excel.Interfaces.ChartBorderUpdateData;'
+      return:
+        type:
+          - excel.Excel.Interfaces.ChartBorderUpdateData
+  - uid: excel_release.Excel.Interfaces.ChartTrendlineLabelFormatUpdateData.font
+    summary: |-
+      表示图表趋势线标签的字体属性（字体名称、字体大小、颜色等）。
 
-    \[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-  name: border
-  fullName: border
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'border?: Excel.Interfaces.ChartBorderUpdateData;'
-    return:
-      type:
-      - excel.Excel.Interfaces.ChartBorderUpdateData
-- uid: excel_release.Excel.Interfaces.ChartTrendlineLabelFormatUpdateData.font
-  summary: >-
-    表示图表趋势线标签的字体属性（字体名称、字体大小、颜色等）。
-
-
-    \[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-  name: font
-  fullName: font
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'font?: Excel.Interfaces.ChartFontUpdateData;'
-    return:
-      type:
-      - excel.Excel.Interfaces.ChartFontUpdateData
+      \[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    name: font
+    fullName: font
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'font?: Excel.Interfaces.ChartFontUpdateData;'
+      return:
+        type:
+          - excel.Excel.Interfaces.ChartFontUpdateData
