--- a/docs/docs-ref-autogen/excel_release/excel.interfaces.conditionalrangefontdata.yml
+++ b/docs/docs-ref-autogen/excel_release/excel.interfaces.conditionalrangefontdata.yml
@@ -1,102 +1,91 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: d2bf29212965ea71d750a84332df0fe8468f3f8e
-ms.sourcegitcommit: e9bfba6ec767e9d34fd1cf7b38c30f689617900a
-ms.translationtype: MT
-ms.contentlocale: zh-CN
-ms.lasthandoff: 02/20/2019
-ms.locfileid: "30114636"
 items:
-- uid: excel_release.Excel.Interfaces.ConditionalRangeFontData
-  summary: 描述通过调用 "conditionalRangeFont ()" 返回的数据的接口。
-  name: Excel.Interfaces.ConditionalRangeFontData
-  fullName: Excel.Interfaces.ConditionalRangeFontData
-  langs:
-  - typeScript
-  type: interface
-  package: excel_release
-  children:
-  - excel_release.Excel.Interfaces.ConditionalRangeFontData.bold
-  - excel_release.Excel.Interfaces.ConditionalRangeFontData.color
-  - excel_release.Excel.Interfaces.ConditionalRangeFontData.italic
-  - excel_release.Excel.Interfaces.ConditionalRangeFontData.strikethrough
-  - excel_release.Excel.Interfaces.ConditionalRangeFontData.underline
-- uid: excel_release.Excel.Interfaces.ConditionalRangeFontData.bold
-  summary: >-
-    表示字体的加粗状态。
+  - uid: excel_release.Excel.Interfaces.ConditionalRangeFontData
+    summary: 描述通过调用 "conditionalRangeFont ()" 返回的数据的接口。
+    name: Excel.Interfaces.ConditionalRangeFontData
+    fullName: Excel.Interfaces.ConditionalRangeFontData
+    langs:
+      - typeScript
+    type: interface
+    package: excel_release
+    children:
+      - excel_release.Excel.Interfaces.ConditionalRangeFontData.bold
+      - excel_release.Excel.Interfaces.ConditionalRangeFontData.color
+      - excel_release.Excel.Interfaces.ConditionalRangeFontData.italic
+      - excel_release.Excel.Interfaces.ConditionalRangeFontData.strikethrough
+      - excel_release.Excel.Interfaces.ConditionalRangeFontData.underline
+  - uid: excel_release.Excel.Interfaces.ConditionalRangeFontData.bold
+    summary: |-
+      表示字体的加粗状态。
 
+      \[[API 集: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    name: bold
+    fullName: bold
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'bold?: boolean;'
+      return:
+        type:
+          - boolean
+  - uid: excel_release.Excel.Interfaces.ConditionalRangeFontData.color
+    summary: |-
+      文本颜色的 HTML 颜色代码表示。 例如， \#FF0000 表示红色。
 
-    \[[API 集: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-  name: bold
-  fullName: bold
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'bold?: boolean;'
-    return:
-      type:
-      - boolean
-- uid: excel_release.Excel.Interfaces.ConditionalRangeFontData.color
-  summary: >-
-    文本颜色的 HTML 颜色代码表示形式。 例如， \#FF0000 表示红色。
+      \[[API 集: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    name: color
+    fullName: color
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'color?: string;'
+      return:
+        type:
+          - string
+  - uid: excel_release.Excel.Interfaces.ConditionalRangeFontData.italic
+    summary: |-
+      表示字体的斜体状态。
 
+      \[[API 集: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    name: italic
+    fullName: italic
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'italic?: boolean;'
+      return:
+        type:
+          - boolean
+  - uid: excel_release.Excel.Interfaces.ConditionalRangeFontData.strikethrough
+    summary: |-
+      表示字体的删除线状态。
 
-    \[[API 集: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-  name: color
-  fullName: color
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'color?: string;'
-    return:
-      type:
-      - string
-- uid: excel_release.Excel.Interfaces.ConditionalRangeFontData.italic
-  summary: >-
-    表示字体的斜体状态。
+      \[[API 集: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    name: strikethrough
+    fullName: strikethrough
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'strikethrough?: boolean;'
+      return:
+        type:
+          - boolean
+  - uid: excel_release.Excel.Interfaces.ConditionalRangeFontData.underline
+    summary: |-
+      应用于字体的下划线类型。 有关详细信息, 请参阅 ConditionalRangeFontUnderlineStyle。
 
-
-    \[[API 集: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-  name: italic
-  fullName: italic
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'italic?: boolean;'
-    return:
-      type:
-      - boolean
-- uid: excel_release.Excel.Interfaces.ConditionalRangeFontData.strikethrough
-  summary: >-
-    表示字体的删除线状态。
-
-
-    \[[API 集: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-  name: strikethrough
-  fullName: strikethrough
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'strikethrough?: boolean;'
-    return:
-      type:
-      - boolean
-- uid: excel_release.Excel.Interfaces.ConditionalRangeFontData.underline
-  summary: >-
-    应用于字体的下划线类型。 有关详细信息, 请参阅 ConditionalRangeFontUnderlineStyle。
-
-
-    \[[API 集: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-  name: underline
-  fullName: underline
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'underline?: Excel.ConditionalRangeFontUnderlineStyle | "None" | "Single" | "Double";'
-    return:
-      type:
-      - Excel.ConditionalRangeFontUnderlineStyle | "None" | "Single" | "Double"
+      \[[API 集: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    name: underline
+    fullName: underline
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'underline?: Excel.ConditionalRangeFontUnderlineStyle | "None" | "Single" | "Double";'
+      return:
+        type:
+          - Excel.ConditionalRangeFontUnderlineStyle | "None" | "Single" | "Double"
