--- a/docs/docs-ref-autogen/visio/visio.interfaces.commentcollectionupdatedata.yml
+++ b/docs/docs-ref-autogen/visio/visio.interfaces.commentcollectionupdatedata.yml
@@ -1,29 +1,23 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 06c690b28a767e7acd4cb7338b9de53cacbeee20
-ms.sourcegitcommit: d356f1545c328d4b59ce814fcab8191e4231f1dc
-ms.translationtype: MT
-ms.contentlocale: zh-CN
-ms.lasthandoff: 02/13/2019
-ms.locfileid: "29977431"
 items:
-- uid: visio.Visio.Interfaces.CommentCollectionUpdateData
-  summary: 更新对 CommentCollection 对象，用于数据接口"commentCollection.set (<!-- -->{...}<!-- -->)".
-  name: Visio.Interfaces.CommentCollectionUpdateData
-  fullName: Visio.Interfaces.CommentCollectionUpdateData
-  langs:
-  - typeScript
-  type: interface
-  package: visio
-  children:
-  - visio.Visio.Interfaces.CommentCollectionUpdateData.items
-- uid: visio.Visio.Interfaces.CommentCollectionUpdateData.items
-  name: items
-  fullName: items
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'items?: Visio.Interfaces.CommentData[];'
-    return:
-      type:
-      - Visio.Interfaces.CommentData[]
+  - uid: visio.Visio.Interfaces.CommentCollectionUpdateData
+    summary: '一个用于更新 CommentCollection 对象上的数据的接口, 可用于 "CommentCollection (<!-- -->{ ... }<!-- -->)".'
+    name: Visio.Interfaces.CommentCollectionUpdateData
+    fullName: Visio.Interfaces.CommentCollectionUpdateData
+    langs:
+      - typeScript
+    type: interface
+    package: visio
+    children:
+      - visio.Visio.Interfaces.CommentCollectionUpdateData.items
+  - uid: visio.Visio.Interfaces.CommentCollectionUpdateData.items
+    name: items
+    fullName: items
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'items?: Visio.Interfaces.CommentData[];'
+      return:
+        type:
+          - 'Visio.Interfaces.CommentData[]'
