--- a/docs/docs-ref-autogen/visio/visio.interfaces.documentloadoptions.yml
+++ b/docs/docs-ref-autogen/visio/visio.interfaces.documentloadoptions.yml
@@ -1,67 +1,58 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: bafe35adf773d55ff6ef28373b50d816caeff534
-ms.sourcegitcommit: d356f1545c328d4b59ce814fcab8191e4231f1dc
-ms.translationtype: MT
-ms.contentlocale: zh-CN
-ms.lasthandoff: 02/13/2019
-ms.locfileid: "29983825"
 items:
-- uid: visio.Visio.Interfaces.DocumentLoadOptions
-  summary: >-
-    表示 Document 类。
+  - uid: visio.Visio.Interfaces.DocumentLoadOptions
+    summary: |-
+      表示 Document 类。
 
+      \[[API 集: 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]
+    name: Visio.Interfaces.DocumentLoadOptions
+    fullName: Visio.Interfaces.DocumentLoadOptions
+    langs:
+      - typeScript
+    type: interface
+    package: visio
+    children:
+      - visio.Visio.Interfaces.DocumentLoadOptions.$all
+      - visio.Visio.Interfaces.DocumentLoadOptions.application
+      - visio.Visio.Interfaces.DocumentLoadOptions.view
+  - uid: visio.Visio.Interfaces.DocumentLoadOptions.$all
+    name: $all
+    fullName: $all
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: '$all?: boolean;'
+      return:
+        type:
+          - boolean
+  - uid: visio.Visio.Interfaces.DocumentLoadOptions.application
+    summary: |-
+      表示包含此文档的 Visio 应用程序实例。
 
-    \[[API 集： 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]
-  name: Visio.Interfaces.DocumentLoadOptions
-  fullName: Visio.Interfaces.DocumentLoadOptions
-  langs:
-  - typeScript
-  type: interface
-  package: visio
-  children:
-  - visio.Visio.Interfaces.DocumentLoadOptions.$all
-  - visio.Visio.Interfaces.DocumentLoadOptions.application
-  - visio.Visio.Interfaces.DocumentLoadOptions.view
-- uid: visio.Visio.Interfaces.DocumentLoadOptions.$all
-  name: $all
-  fullName: $all
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: '$all?: boolean;'
-    return:
-      type:
-      - boolean
-- uid: visio.Visio.Interfaces.DocumentLoadOptions.application
-  summary: >-
-    表示包含此文档的 Visio 应用程序实例。
+      \[[API 集: 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]
+    name: application
+    fullName: application
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'application?: Visio.Interfaces.ApplicationLoadOptions;'
+      return:
+        type:
+          - Visio.Interfaces.ApplicationLoadOptions
+  - uid: visio.Visio.Interfaces.DocumentLoadOptions.view
+    summary: |-
+      返回 DocumentView 对象。
 
-
-    \[[API 集： 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]
-  name: application
-  fullName: application
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'application?: Visio.Interfaces.ApplicationLoadOptions;'
-    return:
-      type:
-      - Visio.Interfaces.ApplicationLoadOptions
-- uid: visio.Visio.Interfaces.DocumentLoadOptions.view
-  summary: >-
-    返回的文档对象。
-
-
-    \[[API 集： 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]
-  name: view
-  fullName: view
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'view?: Visio.Interfaces.DocumentViewLoadOptions;'
-    return:
-      type:
-      - visio.Visio.Interfaces.DocumentViewLoadOptions
+      \[[API 集: 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]
+    name: view
+    fullName: view
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'view?: Visio.Interfaces.DocumentViewLoadOptions;'
+      return:
+        type:
+          - visio.Visio.Interfaces.DocumentViewLoadOptions
