--- a/docs/docs-ref-autogen/visio/visio.interfaces.pageupdatedata.yml
+++ b/docs/docs-ref-autogen/visio/visio.interfaces.pageupdatedata.yml
@@ -1,34 +1,27 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: e08a620c481589257ae8d48b9f33dc3f88b1e3f8
-ms.sourcegitcommit: d356f1545c328d4b59ce814fcab8191e4231f1dc
-ms.translationtype: MT
-ms.contentlocale: zh-CN
-ms.lasthandoff: 02/13/2019
-ms.locfileid: "29977774"
 items:
-- uid: visio.Visio.Interfaces.PageUpdateData
-  summary: Page 对象，用于上的数据更新接口"page.set (<!-- -->{...}<!-- -->)".
-  name: Visio.Interfaces.PageUpdateData
-  fullName: Visio.Interfaces.PageUpdateData
-  langs:
-  - typeScript
-  type: interface
-  package: visio
-  children:
-  - visio.Visio.Interfaces.PageUpdateData.view
-- uid: visio.Visio.Interfaces.PageUpdateData.view
-  summary: >-
-    返回页上的视图。
+  - uid: visio.Visio.Interfaces.PageUpdateData
+    summary: '用于更新 page 对象上的数据的接口, 可用于 "page. set (<!-- -->{ ... }<!-- -->)".'
+    name: Visio.Interfaces.PageUpdateData
+    fullName: Visio.Interfaces.PageUpdateData
+    langs:
+      - typeScript
+    type: interface
+    package: visio
+    children:
+      - visio.Visio.Interfaces.PageUpdateData.view
+  - uid: visio.Visio.Interfaces.PageUpdateData.view
+    summary: |-
+      返回页面的视图。
 
-
-    \[[API 集： 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]
-  name: view
-  fullName: view
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'view?: Visio.Interfaces.PageViewUpdateData;'
-    return:
-      type:
-      - visio.Visio.Interfaces.PageViewUpdateData
+      \[[API 集: 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]
+    name: view
+    fullName: view
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'view?: Visio.Interfaces.PageViewUpdateData;'
+      return:
+        type:
+          - visio.Visio.Interfaces.PageViewUpdateData
