--- a/docs/docs-ref-autogen/visio/visio.pageview.yml
+++ b/docs/docs-ref-autogen/visio/visio.pageview.yml
@@ -15,6 +15,7 @@ items:
     package: visio
     children:
       - visio.Visio.PageView.centerViewportOnShape
+      - visio.Visio.PageView.context
       - visio.Visio.PageView.fitToWindow
       - visio.Visio.PageView.getPosition
       - visio.Visio.PageView.getSelection
@@ -65,6 +66,18 @@ items:
           description: 在中心位置显示的形状的 ID。
           type:
             - number
+  - uid: visio.Visio.PageView.context
+    summary: 与该对象关联的请求上下文。 这会将加载项的进程连接到 Office 主机应用程序的进程。
+    name: context
+    fullName: context
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'context: RequestContext;'
+      return:
+        type:
+          - RequestContext
   - uid: visio.Visio.PageView.fitToWindow
     summary: |-
       让页面填满当前窗口。
@@ -262,6 +275,7 @@ items:
           type:
             - visio.Visio.Position
   - uid: visio.Visio.PageView.toJSON
+    summary: '重写 JavaScript `toJSON()`方法, 以便在将 API 对象传递到时提供更有用的输出`JSON.stringify()`<!-- -->. (`JSON.stringify`<!-- -->反过来, 也会调用传递`toJSON`给它的对象的方法。尽管原始 PageView 对象是 API 对象, 但`toJSON`方法返回一个无格式的 JavaScript 对象 (类型为`Visio.Interfaces.PageViewData`<!-- -->), 其中包含原始对象中所有已加载的子属性的浅表副本。'
     name: toJSON()
     fullName: toJSON()
     langs:
