--- a/docs/docs-ref-autogen/excel/excel.conditionalcolorscalecriterion.yml
+++ b/docs/docs-ref-autogen/excel/excel.conditionalcolorscalecriterion.yml
@@ -1,72 +1,62 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: cef6ae844a2aef7a03f10a82c3e0638db6f96c2b
-ms.sourcegitcommit: a68606173477c7fb4069880eea941766c7d8c50d
-ms.translationtype: MT
-ms.contentlocale: zh-CN
-ms.lasthandoff: 02/01/2019
-ms.locfileid: "29703286"
 items:
-- uid: excel.Excel.ConditionalColorScaleCriterion
-  summary: >-
-    代表一个颜色刻度条件，其中包含类型、 值和颜色。
+  - uid: excel.Excel.ConditionalColorScaleCriterion
+    summary: |-
+      表示包含类型、值和颜色的色阶条件。
 
+      \[[API 集: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    name: Excel.ConditionalColorScaleCriterion
+    fullName: Excel.ConditionalColorScaleCriterion
+    langs:
+      - typeScript
+    type: interface
+    package: excel
+    children:
+      - excel.Excel.ConditionalColorScaleCriterion.color
+      - excel.Excel.ConditionalColorScaleCriterion.formula
+      - excel.Excel.ConditionalColorScaleCriterion.type
+  - uid: excel.Excel.ConditionalColorScaleCriterion.color
+    summary: |-
+      色阶颜色的 HTML 颜色代码表示形式。 例如， \#FF0000 表示红色。
 
-    \[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-  name: Excel.ConditionalColorScaleCriterion
-  fullName: Excel.ConditionalColorScaleCriterion
-  langs:
-  - typeScript
-  type: interface
-  package: excel
-  children:
-  - excel.Excel.ConditionalColorScaleCriterion.color
-  - excel.Excel.ConditionalColorScaleCriterion.formula
-  - excel.Excel.ConditionalColorScaleCriterion.type
-- uid: excel.Excel.ConditionalColorScaleCriterion.color
-  summary: >-
-    HTML 颜色代码的表示形式的颜色刻度颜色。 例如， \#FF0000 表示红色。
+      \[[API 集: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    name: color
+    fullName: color
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'color?: string;'
+      return:
+        type:
+          - string
+  - uid: excel.Excel.ConditionalColorScaleCriterion.formula
+    summary: |-
+      数字、公式或 null（如果类型为 LowestValue）。
 
+      \[[API 集: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    name: formula
+    fullName: formula
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'formula?: string;'
+      return:
+        type:
+          - string
+  - uid: excel.Excel.ConditionalColorScaleCriterion.type
+    summary: |-
+      条件条件公式应基于什么。
 
-    \[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-  name: color
-  fullName: color
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'color?: string;'
-    return:
-      type:
-      - string
-- uid: excel.Excel.ConditionalColorScaleCriterion.formula
-  summary: >-
-    数字、公式或 null（如果类型为 LowestValue）。
-
-
-    \[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-  name: formula
-  fullName: formula
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'formula?: string;'
-    return:
-      type:
-      - string
-- uid: excel.Excel.ConditionalColorScaleCriterion.type
-  summary: >-
-    应基于什么条件条件公式。
-
-
-    \[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-  name: type
-  fullName: type
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'type: Excel.ConditionalFormatColorCriterionType | "Invalid" | "LowestValue" | "HighestValue" | "Number" | "Percent" | "Formula" | "Percentile";'
-    return:
-      type:
-      - Excel.ConditionalFormatColorCriterionType | "Invalid" | "LowestValue" | "HighestValue" | "Number" | "Percent" | "Formula" | "Percentile"
+      \[[API 集: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    name: type
+    fullName: type
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'type: Excel.ConditionalFormatColorCriterionType | "Invalid" | "LowestValue" | "HighestValue" | "Number" | "Percent" | "Formula" | "Percentile";'
+      return:
+        type:
+          - Excel.ConditionalFormatColorCriterionType | "Invalid" | "LowestValue" | "HighestValue" | "Number" | "Percent" | "Formula" | "Percentile"
