--- a/docs/docs-ref-autogen/excel/excel.fivearrowsset.yml
+++ b/docs/docs-ref-autogen/excel/excel.fivearrowsset.yml
@@ -1,76 +1,70 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 5ad4d3e1b913dbb608c3ed1ac6ee72e0a10e33a1
-ms.sourcegitcommit: e9bfba6ec767e9d34fd1cf7b38c30f689617900a
-ms.translationtype: MT
-ms.contentlocale: zh-CN
-ms.lasthandoff: 02/20/2019
-ms.locfileid: "30098514"
 items:
-- uid: excel.Excel.FiveArrowsSet
-  name: Excel.FiveArrowsSet
-  fullName: Excel.FiveArrowsSet
-  langs:
-  - typeScript
-  type: interface
-  package: excel
-  children:
-  - excel.Excel.FiveArrowsSet.greenUpArrow
-  - excel.Excel.FiveArrowsSet.redDownArrow
-  - excel.Excel.FiveArrowsSet.yellowDownInclineArrow
-  - excel.Excel.FiveArrowsSet.yellowSideArrow
-  - excel.Excel.FiveArrowsSet.yellowUpInclineArrow
-- uid: excel.Excel.FiveArrowsSet.greenUpArrow
-  name: greenUpArrow
-  fullName: greenUpArrow
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'greenUpArrow: Icon;'
-    return:
-      type:
-      - Icon
-- uid: excel.Excel.FiveArrowsSet.redDownArrow
-  name: redDownArrow
-  fullName: redDownArrow
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'redDownArrow: Icon;'
-    return:
-      type:
-      - Icon
-- uid: excel.Excel.FiveArrowsSet.yellowDownInclineArrow
-  name: yellowDownInclineArrow
-  fullName: yellowDownInclineArrow
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'yellowDownInclineArrow: Icon;'
-    return:
-      type:
-      - Icon
-- uid: excel.Excel.FiveArrowsSet.yellowSideArrow
-  name: yellowSideArrow
-  fullName: yellowSideArrow
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'yellowSideArrow: Icon;'
-    return:
-      type:
-      - Icon
-- uid: excel.Excel.FiveArrowsSet.yellowUpInclineArrow
-  name: yellowUpInclineArrow
-  fullName: yellowUpInclineArrow
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'yellowUpInclineArrow: Icon;'
-    return:
-      type:
-      - Icon
+  - uid: excel_release.Excel.FiveArrowsSet
+    name: Excel.FiveArrowsSet
+    fullName: Excel.FiveArrowsSet
+    langs:
+      - typeScript
+    type: interface
+    package: excel_release
+    children:
+      - excel_release.Excel.FiveArrowsSet.greenUpArrow
+      - excel_release.Excel.FiveArrowsSet.redDownArrow
+      - excel_release.Excel.FiveArrowsSet.yellowDownInclineArrow
+      - excel_release.Excel.FiveArrowsSet.yellowSideArrow
+      - excel_release.Excel.FiveArrowsSet.yellowUpInclineArrow
+  - uid: excel_release.Excel.FiveArrowsSet.greenUpArrow
+    name: greenUpArrow
+    fullName: greenUpArrow
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'greenUpArrow: Icon;'
+      return:
+        type:
+          - Icon
+  - uid: excel_release.Excel.FiveArrowsSet.redDownArrow
+    name: redDownArrow
+    fullName: redDownArrow
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'redDownArrow: Icon;'
+      return:
+        type:
+          - Icon
+  - uid: excel_release.Excel.FiveArrowsSet.yellowDownInclineArrow
+    name: yellowDownInclineArrow
+    fullName: yellowDownInclineArrow
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'yellowDownInclineArrow: Icon;'
+      return:
+        type:
+          - Icon
+  - uid: excel_release.Excel.FiveArrowsSet.yellowSideArrow
+    name: yellowSideArrow
+    fullName: yellowSideArrow
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'yellowSideArrow: Icon;'
+      return:
+        type:
+          - Icon
+  - uid: excel_release.Excel.FiveArrowsSet.yellowUpInclineArrow
+    name: yellowUpInclineArrow
+    fullName: yellowUpInclineArrow
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'yellowUpInclineArrow: Icon;'
+      return:
+        type:
+          - Icon
