--- a/docs/docs-ref-autogen/excel/excel.interfaces.charterrorbarsdata.yml
+++ b/docs/docs-ref-autogen/excel/excel.interfaces.charterrorbarsdata.yml
@@ -1,107 +1,96 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 7395c1b061fd22431871f237d0324dbd5df1b183
-ms.sourcegitcommit: e9bfba6ec767e9d34fd1cf7b38c30f689617900a
-ms.translationtype: MT
-ms.contentlocale: zh-CN
-ms.lasthandoff: 02/20/2019
-ms.locfileid: "30107839"
 items:
-- uid: excel.Excel.Interfaces.ChartErrorBarsData
-  summary: 描述通过调用 "chartErrorBars ()" 返回的数据的接口。
-  name: Excel.Interfaces.ChartErrorBarsData
-  fullName: Excel.Interfaces.ChartErrorBarsData
-  langs:
-  - typeScript
-  type: interface
-  package: excel
-  children:
-  - excel.Excel.Interfaces.ChartErrorBarsData.endStyleCap
-  - excel.Excel.Interfaces.ChartErrorBarsData.format
-  - excel.Excel.Interfaces.ChartErrorBarsData.include
-  - excel.Excel.Interfaces.ChartErrorBarsData.type
-  - excel.Excel.Interfaces.ChartErrorBarsData.visible
-- uid: excel.Excel.Interfaces.ChartErrorBarsData.endStyleCap
-  summary: >-
-    表示是否对误差线使用尾部样式帽。
+  - uid: excel.Excel.Interfaces.ChartErrorBarsData
+    summary: 描述通过调用 "chartErrorBars ()" 返回的数据的接口。
+    name: Excel.Interfaces.ChartErrorBarsData
+    fullName: Excel.Interfaces.ChartErrorBarsData
+    langs:
+      - typeScript
+    type: interface
+    package: excel
+    children:
+      - excel.Excel.Interfaces.ChartErrorBarsData.endStyleCap
+      - excel.Excel.Interfaces.ChartErrorBarsData.format
+      - excel.Excel.Interfaces.ChartErrorBarsData.include
+      - excel.Excel.Interfaces.ChartErrorBarsData.type
+      - excel.Excel.Interfaces.ChartErrorBarsData.visible
+  - uid: excel.Excel.Interfaces.ChartErrorBarsData.endStyleCap
+    summary: |-
+      表示误差线是否具有终止端样式。
 
+      \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    isPreview: true
+    name: endStyleCap
+    fullName: endStyleCap
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'endStyleCap?: boolean;'
+      return:
+        type:
+          - boolean
+  - uid: excel.Excel.Interfaces.ChartErrorBarsData.format
+    summary: |-
+      表示图表 ErrorBars 的格式。
 
-    \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-  isPreview: true
-  name: endStyleCap
-  fullName: endStyleCap
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'endStyleCap?: boolean;'
-    return:
-      type:
-      - boolean
-- uid: excel.Excel.Interfaces.ChartErrorBarsData.format
-  summary: >-
-    表示图表 ErrorBars 的格式。
+      \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    isPreview: true
+    name: format
+    fullName: format
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'format?: Excel.Interfaces.ChartErrorBarsFormatData;'
+      return:
+        type:
+          - excel.Excel.Interfaces.ChartErrorBarsFormatData
+  - uid: excel.Excel.Interfaces.ChartErrorBarsData.include
+    summary: |-
+      表示要包含的误差线部分。 有关详细信息，请参阅 Excel.ChartErrorBarsInclude。
 
+      \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    isPreview: true
+    name: include
+    fullName: include
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'include?: Excel.ChartErrorBarsInclude | "Both" | "MinusValues" | "PlusValues";'
+      return:
+        type:
+          - Excel.ChartErrorBarsInclude | "Both" | "MinusValues" | "PlusValues"
+  - uid: excel.Excel.Interfaces.ChartErrorBarsData.type
+    summary: |-
+      指定由误差线标记的区域。 有关详细信息，请参阅 Excel.ChartErrorBarsType。
 
-    \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-  isPreview: true
-  name: format
-  fullName: format
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'format?: Excel.Interfaces.ChartErrorBarsFormatData;'
-    return:
-      type:
-      - excel.Excel.Interfaces.ChartErrorBarsFormatData
-- uid: excel.Excel.Interfaces.ChartErrorBarsData.include
-  summary: >-
-    表示要包含的误差线部分。 有关详细信息, 请参阅 ChartErrorBarsInclude。
+      \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    isPreview: true
+    name: type
+    fullName: type
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'type?: Excel.ChartErrorBarsType | "FixedValue" | "Percent" | "StDev" | "StError" | "Custom";'
+      return:
+        type:
+          - Excel.ChartErrorBarsType | "FixedValue" | "Percent" | "StDev" | "StError" | "Custom"
+  - uid: excel.Excel.Interfaces.ChartErrorBarsData.visible
+    summary: |-
+      表示是否显示误差线。
 
-
-    \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-  isPreview: true
-  name: include
-  fullName: include
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'include?: Excel.ChartErrorBarsInclude | "Both" | "MinusValues" | "PlusValues";'
-    return:
-      type:
-      - Excel.ChartErrorBarsInclude | "Both" | "MinusValues" | "PlusValues"
-- uid: excel.Excel.Interfaces.ChartErrorBarsData.type
-  summary: >-
-    代表误差线标记的区域。 有关详细信息, 请参阅 ChartErrorBarsType。
-
-
-    \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-  isPreview: true
-  name: type
-  fullName: type
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'type?: Excel.ChartErrorBarsType | "FixedValue" | "Percent" | "StDev" | "StError" | "Custom";'
-    return:
-      type:
-      - Excel.ChartErrorBarsType | "FixedValue" | "Percent" | "StDev" | "StError" | "Custom"
-- uid: excel.Excel.Interfaces.ChartErrorBarsData.visible
-  summary: >-
-    表示是否显示误差线。
-
-
-    \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-  isPreview: true
-  name: visible
-  fullName: visible
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'visible?: boolean;'
-    return:
-      type:
-      - boolean
+      \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    isPreview: true
+    name: visible
+    fullName: visible
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'visible?: boolean;'
+      return:
+        type:
+          - boolean
