--- a/docs/docs-ref-autogen/excel/excel.interfaces.chartlegendformatdata.yml
+++ b/docs/docs-ref-autogen/excel/excel.interfaces.chartlegendformatdata.yml
@@ -1,51 +1,43 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: c5350ba70323b35ebc6157c9a9821c03c501456c
-ms.sourcegitcommit: 016e17422cf62dc9f1de1809666e9244e41cc1a9
-ms.translationtype: MT
-ms.contentlocale: zh-CN
-ms.lasthandoff: 11/09/2018
-ms.locfileid: "26234574"
 items:
-- uid: excel.Excel.Interfaces.ChartLegendFormatData
-  summary: 描述调用"chartLegendFormat.toJSON()"返回的数据的接口。
-  name: Excel.Interfaces.ChartLegendFormatData
-  fullName: Excel.Interfaces.ChartLegendFormatData
-  langs:
-  - typeScript
-  type: interface
-  package: excel
-  children:
-  - excel.Excel.Interfaces.ChartLegendFormatData.border
-  - excel.Excel.Interfaces.ChartLegendFormatData.font
-- uid: excel.Excel.Interfaces.ChartLegendFormatData.border
-  summary: >-
-    代表边框格式，其中包括颜色、 linestyle 和权重。 只读。
+  - uid: excel.Excel.Interfaces.ChartLegendFormatData
+    summary: 描述通过调用 "chartLegendFormat ()" 返回的数据的接口。
+    name: Excel.Interfaces.ChartLegendFormatData
+    fullName: Excel.Interfaces.ChartLegendFormatData
+    langs:
+      - typeScript
+    type: interface
+    package: excel
+    children:
+      - excel.Excel.Interfaces.ChartLegendFormatData.border
+      - excel.Excel.Interfaces.ChartLegendFormatData.font
+  - uid: excel.Excel.Interfaces.ChartLegendFormatData.border
+    summary: |-
+      表示边框格式，包括颜色、线条样式和粗细。 只读。
 
+      \[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    name: border
+    fullName: border
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'border?: Excel.Interfaces.ChartBorderData;'
+      return:
+        type:
+          - excel.Excel.Interfaces.ChartBorderData
+  - uid: excel.Excel.Interfaces.ChartLegendFormatData.font
+    summary: |-
+      表示图表图例的字体属性，例如字体名称、字体大小、颜色等。 只读。
 
-    \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-  name: border
-  fullName: border
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'border?: Excel.Interfaces.ChartBorderData;'
-    return:
-      type:
-      - excel.Excel.Interfaces.ChartBorderData
-- uid: excel.Excel.Interfaces.ChartLegendFormatData.font
-  summary: >-
-    表示图表图例的字体属性，例如字体名称、字体大小、颜色等。只读。
-
-
-    \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-  name: font
-  fullName: font
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'font?: Excel.Interfaces.ChartFontData;'
-    return:
-      type:
-      - excel.Excel.Interfaces.ChartFontData
+      \[[API 集: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    name: font
+    fullName: font
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'font?: Excel.Interfaces.ChartFontData;'
+      return:
+        type:
+          - excel.Excel.Interfaces.ChartFontData
