--- a/docs/docs-ref-autogen/excel/excel.interfaces.chartplotareadata.yml
+++ b/docs/docs-ref-autogen/excel/excel.interfaces.chartplotareadata.yml
@@ -1,187 +1,171 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 1f8376d8eb419f4269365ad3499cc6297bbb5e4a
-ms.sourcegitcommit: 016e17422cf62dc9f1de1809666e9244e41cc1a9
-ms.translationtype: MT
-ms.contentlocale: zh-CN
-ms.lasthandoff: 11/09/2018
-ms.locfileid: "26230844"
 items:
-- uid: excel.Excel.Interfaces.ChartPlotAreaData
-  summary: 描述调用"chartPlotArea.toJSON()"返回的数据的接口。
-  name: Excel.Interfaces.ChartPlotAreaData
-  fullName: Excel.Interfaces.ChartPlotAreaData
-  langs:
-  - typeScript
-  type: interface
-  package: excel
-  children:
-  - excel.Excel.Interfaces.ChartPlotAreaData.format
-  - excel.Excel.Interfaces.ChartPlotAreaData.height
-  - excel.Excel.Interfaces.ChartPlotAreaData.insideHeight
-  - excel.Excel.Interfaces.ChartPlotAreaData.insideLeft
-  - excel.Excel.Interfaces.ChartPlotAreaData.insideTop
-  - excel.Excel.Interfaces.ChartPlotAreaData.insideWidth
-  - excel.Excel.Interfaces.ChartPlotAreaData.left
-  - excel.Excel.Interfaces.ChartPlotAreaData.position
-  - excel.Excel.Interfaces.ChartPlotAreaData.top
-  - excel.Excel.Interfaces.ChartPlotAreaData.width
-- uid: excel.Excel.Interfaces.ChartPlotAreaData.format
-  summary: >-
-    代表图表 plotArea 的格式。
+  - uid: excel.Excel.Interfaces.ChartPlotAreaData
+    summary: 描述通过调用 "chartPlotArea ()" 返回的数据的接口。
+    name: Excel.Interfaces.ChartPlotAreaData
+    fullName: Excel.Interfaces.ChartPlotAreaData
+    langs:
+      - typeScript
+    type: interface
+    package: excel
+    children:
+      - excel.Excel.Interfaces.ChartPlotAreaData.format
+      - excel.Excel.Interfaces.ChartPlotAreaData.height
+      - excel.Excel.Interfaces.ChartPlotAreaData.insideHeight
+      - excel.Excel.Interfaces.ChartPlotAreaData.insideLeft
+      - excel.Excel.Interfaces.ChartPlotAreaData.insideTop
+      - excel.Excel.Interfaces.ChartPlotAreaData.insideWidth
+      - excel.Excel.Interfaces.ChartPlotAreaData.left
+      - excel.Excel.Interfaces.ChartPlotAreaData.position
+      - excel.Excel.Interfaces.ChartPlotAreaData.top
+      - excel.Excel.Interfaces.ChartPlotAreaData.width
+  - uid: excel.Excel.Interfaces.ChartPlotAreaData.format
+    summary: |-
+      表示图表 plotArea 的格式。
 
+      \[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    name: format
+    fullName: format
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'format?: Excel.Interfaces.ChartPlotAreaFormatData;'
+      return:
+        type:
+          - excel.Excel.Interfaces.ChartPlotAreaFormatData
+  - uid: excel.Excel.Interfaces.ChartPlotAreaData.height
+    summary: |-
+      表示 plotArea 的高度值。
 
-    \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-  name: format
-  fullName: format
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'format?: Excel.Interfaces.ChartPlotAreaFormatData;'
-    return:
-      type:
-      - excel.Excel.Interfaces.ChartPlotAreaFormatData
-- uid: excel.Excel.Interfaces.ChartPlotAreaData.height
-  summary: >-
-    代表 plotArea 的高度值。
+      \[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    name: height
+    fullName: height
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'height?: number;'
+      return:
+        type:
+          - number
+  - uid: excel.Excel.Interfaces.ChartPlotAreaData.insideHeight
+    summary: |-
+      表示 plotArea 的 insideHeight 值。
 
+      \[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    name: insideHeight
+    fullName: insideHeight
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'insideHeight?: number;'
+      return:
+        type:
+          - number
+  - uid: excel.Excel.Interfaces.ChartPlotAreaData.insideLeft
+    summary: |-
+      表示 plotArea 的 insideLeft 值。
 
-    \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-  name: height
-  fullName: height
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'height?: number;'
-    return:
-      type:
-      - number
-- uid: excel.Excel.Interfaces.ChartPlotAreaData.insideHeight
-  summary: >-
-    代表 plotArea 的 insideHeight 值。
+      \[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    name: insideLeft
+    fullName: insideLeft
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'insideLeft?: number;'
+      return:
+        type:
+          - number
+  - uid: excel.Excel.Interfaces.ChartPlotAreaData.insideTop
+    summary: |-
+      表示 plotArea 的 insideTop 值。
 
+      \[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    name: insideTop
+    fullName: insideTop
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'insideTop?: number;'
+      return:
+        type:
+          - number
+  - uid: excel.Excel.Interfaces.ChartPlotAreaData.insideWidth
+    summary: |-
+      表示 plotArea 的 insideWidth 值。
 
-    \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-  name: insideHeight
-  fullName: insideHeight
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'insideHeight?: number;'
-    return:
-      type:
-      - number
-- uid: excel.Excel.Interfaces.ChartPlotAreaData.insideLeft
-  summary: >-
-    代表 plotArea insideLeft 值。
+      \[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    name: insideWidth
+    fullName: insideWidth
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'insideWidth?: number;'
+      return:
+        type:
+          - number
+  - uid: excel.Excel.Interfaces.ChartPlotAreaData.left
+    summary: |-
+      表示 plotArea 的 left 值。
 
+      \[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    name: left
+    fullName: left
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'left?: number;'
+      return:
+        type:
+          - number
+  - uid: excel.Excel.Interfaces.ChartPlotAreaData.position
+    summary: |-
+      表示 plotArea 的位置。
 
-    \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-  name: insideLeft
-  fullName: insideLeft
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'insideLeft?: number;'
-    return:
-      type:
-      - number
-- uid: excel.Excel.Interfaces.ChartPlotAreaData.insideTop
-  summary: >-
-    代表 plotArea insideTop 值。
+      \[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    name: position
+    fullName: position
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'position?: Excel.ChartPlotAreaPosition | "Automatic" | "Custom";'
+      return:
+        type:
+          - Excel.ChartPlotAreaPosition | "Automatic" | "Custom"
+  - uid: excel.Excel.Interfaces.ChartPlotAreaData.top
+    summary: |-
+      表示 plotArea 的 top 值。
 
+      \[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    name: top
+    fullName: top
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'top?: number;'
+      return:
+        type:
+          - number
+  - uid: excel.Excel.Interfaces.ChartPlotAreaData.width
+    summary: |-
+      表示 plotArea 的宽度值。
 
-    \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-  name: insideTop
-  fullName: insideTop
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'insideTop?: number;'
-    return:
-      type:
-      - number
-- uid: excel.Excel.Interfaces.ChartPlotAreaData.insideWidth
-  summary: >-
-    代表 plotArea insideWidth 值。
-
-
-    \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-  name: insideWidth
-  fullName: insideWidth
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'insideWidth?: number;'
-    return:
-      type:
-      - number
-- uid: excel.Excel.Interfaces.ChartPlotAreaData.left
-  summary: >-
-    代表 plotArea 左侧的值。
-
-
-    \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-  name: left
-  fullName: left
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'left?: number;'
-    return:
-      type:
-      - number
-- uid: excel.Excel.Interfaces.ChartPlotAreaData.position
-  summary: >-
-    代表 plotArea 的位置。
-
-
-    \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-  name: position
-  fullName: position
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'position?: Excel.ChartPlotAreaPosition | "Automatic" | "Custom";'
-    return:
-      type:
-      - Excel.ChartPlotAreaPosition | "Automatic" | "Custom"
-- uid: excel.Excel.Interfaces.ChartPlotAreaData.top
-  summary: >-
-    代表 plotArea 的顶部的值。
-
-
-    \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-  name: top
-  fullName: top
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'top?: number;'
-    return:
-      type:
-      - number
-- uid: excel.Excel.Interfaces.ChartPlotAreaData.width
-  summary: >-
-    代表 plotArea 的宽度值。
-
-
-    \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-  name: width
-  fullName: width
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'width?: number;'
-    return:
-      type:
-      - number
+      \[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    name: width
+    fullName: width
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'width?: number;'
+      return:
+        type:
+          - number
