--- a/docs/docs-ref-autogen/excel/excel.interfaces.chartplotareaformatloadoptions.yml
+++ b/docs/docs-ref-autogen/excel/excel.interfaces.chartplotareaformatloadoptions.yml
@@ -1,50 +1,42 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 727fdf44fc4b7e8ec40b74edfbb75540d34723dd
-ms.sourcegitcommit: d356f1545c328d4b59ce814fcab8191e4231f1dc
-ms.translationtype: MT
-ms.contentlocale: zh-CN
-ms.lasthandoff: 02/13/2019
-ms.locfileid: "29983685"
 items:
-- uid: excel.Excel.Interfaces.ChartPlotAreaFormatLoadOptions
-  summary: >-
-    代表图表 plotArea 的格式属性。
+  - uid: excel.Excel.Interfaces.ChartPlotAreaFormatLoadOptions
+    summary: |-
+      表示图表 plotArea 的格式属性。
 
+      \[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    name: Excel.Interfaces.ChartPlotAreaFormatLoadOptions
+    fullName: Excel.Interfaces.ChartPlotAreaFormatLoadOptions
+    langs:
+      - typeScript
+    type: interface
+    package: excel
+    children:
+      - excel.Excel.Interfaces.ChartPlotAreaFormatLoadOptions.$all
+      - excel.Excel.Interfaces.ChartPlotAreaFormatLoadOptions.border
+  - uid: excel.Excel.Interfaces.ChartPlotAreaFormatLoadOptions.$all
+    name: $all
+    fullName: $all
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: '$all?: boolean;'
+      return:
+        type:
+          - boolean
+  - uid: excel.Excel.Interfaces.ChartPlotAreaFormatLoadOptions.border
+    summary: |-
+      表示图表 plotArea 的边框属性。
 
-    \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-  name: Excel.Interfaces.ChartPlotAreaFormatLoadOptions
-  fullName: Excel.Interfaces.ChartPlotAreaFormatLoadOptions
-  langs:
-  - typeScript
-  type: interface
-  package: excel
-  children:
-  - excel.Excel.Interfaces.ChartPlotAreaFormatLoadOptions.$all
-  - excel.Excel.Interfaces.ChartPlotAreaFormatLoadOptions.border
-- uid: excel.Excel.Interfaces.ChartPlotAreaFormatLoadOptions.$all
-  name: $all
-  fullName: $all
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: '$all?: boolean;'
-    return:
-      type:
-      - boolean
-- uid: excel.Excel.Interfaces.ChartPlotAreaFormatLoadOptions.border
-  summary: >-
-    表示图表 plotArea 的边框属性。
-
-
-    \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-  name: border
-  fullName: border
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'border?: Excel.Interfaces.ChartBorderLoadOptions;'
-    return:
-      type:
-      - excel.Excel.Interfaces.ChartBorderLoadOptions
+      \[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    name: border
+    fullName: border
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'border?: Excel.Interfaces.ChartBorderLoadOptions;'
+      return:
+        type:
+          - excel.Excel.Interfaces.ChartBorderLoadOptions
