--- a/docs/docs-ref-autogen/excel/excel.interfaces.colorscaleconditionalformatupdatedata.yml
+++ b/docs/docs-ref-autogen/excel/excel.interfaces.colorscaleconditionalformatupdatedata.yml
@@ -1,34 +1,27 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 48a66e9973f1d62a751905c7a3b6b7d91d0475a9
-ms.sourcegitcommit: d356f1545c328d4b59ce814fcab8191e4231f1dc
-ms.translationtype: MT
-ms.contentlocale: zh-CN
-ms.lasthandoff: 02/13/2019
-ms.locfileid: "29978285"
 items:
-- uid: excel.Excel.Interfaces.ColorScaleConditionalFormatUpdateData
-  summary: 更新对 ColorScaleConditionalFormat 对象，用于数据接口"colorScaleConditionalFormat.set (<!-- -->{...}<!-- -->)".
-  name: Excel.Interfaces.ColorScaleConditionalFormatUpdateData
-  fullName: Excel.Interfaces.ColorScaleConditionalFormatUpdateData
-  langs:
-  - typeScript
-  type: interface
-  package: excel
-  children:
-  - excel.Excel.Interfaces.ColorScaleConditionalFormatUpdateData.criteria
-- uid: excel.Excel.Interfaces.ColorScaleConditionalFormatUpdateData.criteria
-  summary: >-
-    色阶的条件。使用两点色阶时，中点可选。
+  - uid: excel.Excel.Interfaces.ColorScaleConditionalFormatUpdateData
+    summary: '一个用于更新 ColorScaleConditionalFormat 对象上的数据的接口, 可用于 "ColorScaleConditionalFormat (<!-- -->{ ... }<!-- -->)".'
+    name: Excel.Interfaces.ColorScaleConditionalFormatUpdateData
+    fullName: Excel.Interfaces.ColorScaleConditionalFormatUpdateData
+    langs:
+      - typeScript
+    type: interface
+    package: excel
+    children:
+      - excel.Excel.Interfaces.ColorScaleConditionalFormatUpdateData.criteria
+  - uid: excel.Excel.Interfaces.ColorScaleConditionalFormatUpdateData.criteria
+    summary: |-
+      色阶的条件。 使用两个点的色阶时, 中点是可选的。
 
-
-    \[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-  name: criteria
-  fullName: criteria
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'criteria?: Excel.ConditionalColorScaleCriteria;'
-    return:
-      type:
-      - excel.Excel.ConditionalColorScaleCriteria
+      \[[API 集: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    name: criteria
+    fullName: criteria
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'criteria?: Excel.ConditionalColorScaleCriteria;'
+      return:
+        type:
+          - excel.Excel.ConditionalColorScaleCriteria
