--- a/docs/docs-ref-autogen/excel/excel.interfaces.customxmlpartcollectiondata.yml
+++ b/docs/docs-ref-autogen/excel/excel.interfaces.customxmlpartcollectiondata.yml
@@ -1,29 +1,23 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 775da65fdd952206bd55369e8dfdcf1bf7c21d2b
-ms.sourcegitcommit: 016e17422cf62dc9f1de1809666e9244e41cc1a9
-ms.translationtype: MT
-ms.contentlocale: zh-CN
-ms.lasthandoff: 11/09/2018
-ms.locfileid: "26233867"
 items:
-- uid: excel.Excel.Interfaces.CustomXmlPartCollectionData
-  summary: 描述调用"customXmlPartCollection.toJSON()"返回的数据的接口。
-  name: Excel.Interfaces.CustomXmlPartCollectionData
-  fullName: Excel.Interfaces.CustomXmlPartCollectionData
-  langs:
-  - typeScript
-  type: interface
-  package: excel
-  children:
-  - excel.Excel.Interfaces.CustomXmlPartCollectionData.items
-- uid: excel.Excel.Interfaces.CustomXmlPartCollectionData.items
-  name: items
-  fullName: items
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'items?: Excel.Interfaces.CustomXmlPartData[];'
-    return:
-      type:
-      - Excel.Interfaces.CustomXmlPartData[]
+  - uid: excel.Excel.Interfaces.CustomXmlPartCollectionData
+    summary: 描述通过调用 "customXmlPartCollection ()" 返回的数据的接口。
+    name: Excel.Interfaces.CustomXmlPartCollectionData
+    fullName: Excel.Interfaces.CustomXmlPartCollectionData
+    langs:
+      - typeScript
+    type: interface
+    package: excel
+    children:
+      - excel.Excel.Interfaces.CustomXmlPartCollectionData.items
+  - uid: excel.Excel.Interfaces.CustomXmlPartCollectionData.items
+    name: items
+    fullName: items
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'items?: Excel.Interfaces.CustomXmlPartData[];'
+      return:
+        type:
+          - 'Excel.Interfaces.CustomXmlPartData[]'
