--- a/docs/docs-ref-autogen/excel/excel.interfaces.settingcollectionupdatedata.yml
+++ b/docs/docs-ref-autogen/excel/excel.interfaces.settingcollectionupdatedata.yml
@@ -1,29 +1,23 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 24a0b86b52b9cbd572f5ac40f4a8eed303d8725c
-ms.sourcegitcommit: d356f1545c328d4b59ce814fcab8191e4231f1dc
-ms.translationtype: MT
-ms.contentlocale: zh-CN
-ms.lasthandoff: 02/13/2019
-ms.locfileid: "29975674"
 items:
-- uid: excel.Excel.Interfaces.SettingCollectionUpdateData
-  summary: 更新对 SettingCollection 对象，用于数据接口"settingCollection.set (<!-- -->{...}<!-- -->)".
-  name: Excel.Interfaces.SettingCollectionUpdateData
-  fullName: Excel.Interfaces.SettingCollectionUpdateData
-  langs:
-  - typeScript
-  type: interface
-  package: excel
-  children:
-  - excel.Excel.Interfaces.SettingCollectionUpdateData.items
-- uid: excel.Excel.Interfaces.SettingCollectionUpdateData.items
-  name: items
-  fullName: items
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'items?: Excel.Interfaces.SettingData[];'
-    return:
-      type:
-      - Excel.Interfaces.SettingData[]
+  - uid: excel.Excel.Interfaces.SettingCollectionUpdateData
+    summary: '一个用于更新 SettingCollection 对象上的数据的接口, 可用于 "SettingCollection (<!-- -->{ ... }<!-- -->)".'
+    name: Excel.Interfaces.SettingCollectionUpdateData
+    fullName: Excel.Interfaces.SettingCollectionUpdateData
+    langs:
+      - typeScript
+    type: interface
+    package: excel
+    children:
+      - excel.Excel.Interfaces.SettingCollectionUpdateData.items
+  - uid: excel.Excel.Interfaces.SettingCollectionUpdateData.items
+    name: items
+    fullName: items
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'items?: Excel.Interfaces.SettingData[];'
+      return:
+        type:
+          - 'Excel.Interfaces.SettingData[]'
