--- a/docs/docs-ref-autogen/excel/excel.interfaces.shapefilldata.yml
+++ b/docs/docs-ref-autogen/excel/excel.interfaces.shapefilldata.yml
@@ -1,71 +1,62 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: dd8ae9be98dcfef6af6beed25de89a311abe550e
-ms.sourcegitcommit: 5e31602ed9cbddfcff2768b7ed69dd4821440b90
-ms.translationtype: MT
-ms.contentlocale: zh-CN
-ms.lasthandoff: 03/14/2019
-ms.locfileid: "30575751"
 items:
-- uid: excel.Excel.Interfaces.ShapeFillData
-  summary: 描述通过调用 "shapeFill ()" 返回的数据的接口。
-  name: Excel.Interfaces.ShapeFillData
-  fullName: Excel.Interfaces.ShapeFillData
-  langs:
-  - typeScript
-  type: interface
-  package: excel
-  children:
-  - excel.Excel.Interfaces.ShapeFillData.foregroundColor
-  - excel.Excel.Interfaces.ShapeFillData.transparency
-  - excel.Excel.Interfaces.ShapeFillData.type
-- uid: excel.Excel.Interfaces.ShapeFillData.foregroundColor
-  summary: >-
-    代表形状填充的前景色, 格式\#RRGGBB (例如 "FFA500") 或命名的 html 颜色 (例如 "橙色") 的 html 颜色格式。
+  - uid: excel.Excel.Interfaces.ShapeFillData
+    summary: 描述通过调用 "shapeFill ()" 返回的数据的接口。
+    name: Excel.Interfaces.ShapeFillData
+    fullName: Excel.Interfaces.ShapeFillData
+    langs:
+      - typeScript
+    type: interface
+    package: excel
+    children:
+      - excel.Excel.Interfaces.ShapeFillData.foregroundColor
+      - excel.Excel.Interfaces.ShapeFillData.transparency
+      - excel.Excel.Interfaces.ShapeFillData.type
+  - uid: excel.Excel.Interfaces.ShapeFillData.foregroundColor
+    summary: |-
+      代表形状填充的前景色, 格式\#RRGGBB (例如 "FFA500") 或命名的 html 颜色 (例如 "橙色") 的 html 颜色格式。
 
+      \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    isPreview: true
+    name: foregroundColor
+    fullName: foregroundColor
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'foregroundColor?: string;'
+      return:
+        type:
+          - string
+  - uid: excel.Excel.Interfaces.ShapeFillData.transparency
+    summary: |-
+      返回或设置填充的透明度百分比，取值范围为 0.0（不透明）到 1.0（清晰）之间。 如果形状类型不支持透明度或形状填充透明度不一致（例如使用渐变填充类型），则返回 null。
 
-    \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-  isPreview: true
-  name: foregroundColor
-  fullName: foregroundColor
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'foregroundColor?: string;'
-    return:
-      type:
-      - string
-- uid: excel.Excel.Interfaces.ShapeFillData.transparency
-  summary: >-
-    以 0.0 (不透明) 到 1.0 (清除) 中的值的形式返回或设置填充的透明度百分比。 如果形状类型不支持透明度或形状填充的透明度不一致, 例如渐变填充类型, 则返回 null。
+      \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    isPreview: true
+    name: transparency
+    fullName: transparency
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'transparency?: number;'
+      return:
+        type:
+          - number
+  - uid: excel.Excel.Interfaces.ShapeFillData.type
+    summary: |-
+      返回形状的填充类型。 只读。 有关详细信息，请参阅 Excel.ShapeFillType。
 
-
-    \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-  isPreview: true
-  name: transparency
-  fullName: transparency
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'transparency?: number;'
-    return:
-      type:
-      - number
-- uid: excel.Excel.Interfaces.ShapeFillData.type
-  summary: >-
-    返回形状的填充类型。 只读。 有关详细信息, 请参阅 ShapeFillType。
-
-
-    \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-  isPreview: true
-  name: type
-  fullName: type
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'type?: Excel.ShapeFillType | "NoFill" | "Solid" | "Gradient" | "Pattern" | "PictureAndTexture" | "Mixed";'
-    return:
-      type:
-      - Excel.ShapeFillType | "NoFill" | "Solid" | "Gradient" | "Pattern" | "PictureAndTexture" | "Mixed"
+      \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    isPreview: true
+    name: type
+    fullName: type
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'type?: Excel.ShapeFillType | "NoFill" | "Solid" | "Gradient" | "Pattern" | "PictureAndTexture" | "Mixed";'
+      return:
+        type:
+          - Excel.ShapeFillType | "NoFill" | "Solid" | "Gradient" | "Pattern" | "PictureAndTexture" | "Mixed"
