--- a/docs/docs-ref-autogen/excel/excel.interfaces.shapefontdata.yml
+++ b/docs/docs-ref-autogen/excel/excel.interfaces.shapefontdata.yml
@@ -1,125 +1,113 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: fa1618ecfa2963ceaa2d56af8038dfc5332bada8
-ms.sourcegitcommit: 5e31602ed9cbddfcff2768b7ed69dd4821440b90
-ms.translationtype: MT
-ms.contentlocale: zh-CN
-ms.lasthandoff: 03/14/2019
-ms.locfileid: "30575513"
 items:
-- uid: excel.Excel.Interfaces.ShapeFontData
-  summary: 描述通过调用 "shapeFont ()" 返回的数据的接口。
-  name: Excel.Interfaces.ShapeFontData
-  fullName: Excel.Interfaces.ShapeFontData
-  langs:
-  - typeScript
-  type: interface
-  package: excel
-  children:
-  - excel.Excel.Interfaces.ShapeFontData.bold
-  - excel.Excel.Interfaces.ShapeFontData.color
-  - excel.Excel.Interfaces.ShapeFontData.italic
-  - excel.Excel.Interfaces.ShapeFontData.name
-  - excel.Excel.Interfaces.ShapeFontData.size
-  - excel.Excel.Interfaces.ShapeFontData.underline
-- uid: excel.Excel.Interfaces.ShapeFontData.bold
-  summary: >-
-    表示字体的加粗状态。 如果 TextRange 包含粗体和非粗体文本片段，则返回 null。
+  - uid: excel.Excel.Interfaces.ShapeFontData
+    summary: 描述通过调用 "shapeFont ()" 返回的数据的接口。
+    name: Excel.Interfaces.ShapeFontData
+    fullName: Excel.Interfaces.ShapeFontData
+    langs:
+      - typeScript
+    type: interface
+    package: excel
+    children:
+      - excel.Excel.Interfaces.ShapeFontData.bold
+      - excel.Excel.Interfaces.ShapeFontData.color
+      - excel.Excel.Interfaces.ShapeFontData.italic
+      - excel.Excel.Interfaces.ShapeFontData.name
+      - excel.Excel.Interfaces.ShapeFontData.size
+      - excel.Excel.Interfaces.ShapeFontData.underline
+  - uid: excel.Excel.Interfaces.ShapeFontData.bold
+    summary: |-
+      表示字体的加粗状态。 如果 TextRange 包含粗体和非粗体文本片段，则返回 null。
 
+      \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    isPreview: true
+    name: bold
+    fullName: bold
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'bold?: boolean;'
+      return:
+        type:
+          - boolean
+  - uid: excel.Excel.Interfaces.ShapeFontData.color
+    summary: |-
+      文本颜色的 HTML 颜色代码表示形式 (例如, "\#FF0000" 代表红色)。 如果 TextRange 包含具有不同颜色的文本片段，则返回 null。
 
-    \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-  isPreview: true
-  name: bold
-  fullName: bold
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'bold?: boolean;'
-    return:
-      type:
-      - boolean
-- uid: excel.Excel.Interfaces.ShapeFontData.color
-  summary: >-
-    文本颜色的 HTML 颜色代码表示形式 (例如, "\#FF0000" 代表红色)。 如果 TextRange 包含具有不同颜色的文本片段，则返回 null。
+      \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    isPreview: true
+    name: color
+    fullName: color
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'color?: string;'
+      return:
+        type:
+          - string
+  - uid: excel.Excel.Interfaces.ShapeFontData.italic
+    summary: |-
+      表示字体的斜体状态。 如果 TextRange 包含斜体和非斜体文本片段，则返回 null。
 
+      \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    isPreview: true
+    name: italic
+    fullName: italic
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'italic?: boolean;'
+      return:
+        type:
+          - boolean
+  - uid: excel.Excel.Interfaces.ShapeFontData.name
+    summary: |-
+      表示字体名称（例如“Calibri”）。 如果文本是复杂脚本或东亚语言，则这是相应的字体名称，否则是拉丁字体名称。
 
-    \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-  isPreview: true
-  name: color
-  fullName: color
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'color?: string;'
-    return:
-      type:
-      - string
-- uid: excel.Excel.Interfaces.ShapeFontData.italic
-  summary: >-
-    表示字体的斜体状态。 如果 TextRange 同时包含斜体和非斜体文本片段, 则返回 null。
+      \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    isPreview: true
+    name: name
+    fullName: name
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'name?: string;'
+      return:
+        type:
+          - string
+  - uid: excel.Excel.Interfaces.ShapeFontData.size
+    summary: |-
+      表示以磅为单位的字体大小（例如 11）。 如果 TextRange 包含具有不同字体大小的文本片段，则返回 null。
 
+      \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    isPreview: true
+    name: size
+    fullName: size
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'size?: number;'
+      return:
+        type:
+          - number
+  - uid: excel.Excel.Interfaces.ShapeFontData.underline
+    summary: |-
+      应用于字体的下划线类型。 如果 TextRange 包含具有不同下划线样式的文本片段，则返回 null。 有关详细信息，请参阅 Excel.ShapeFontUnderlineStyle。
 
-    \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-  isPreview: true
-  name: italic
-  fullName: italic
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'italic?: boolean;'
-    return:
-      type:
-      - boolean
-- uid: excel.Excel.Interfaces.ShapeFontData.name
-  summary: >-
-    表示字体名称（例如“Calibri”）。 如果文本为复杂文种或东亚语言, 则这是相应的字体名称;否则, 它是西文字体名称。
-
-
-    \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-  isPreview: true
-  name: name
-  fullName: name
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'name?: string;'
-    return:
-      type:
-      - string
-- uid: excel.Excel.Interfaces.ShapeFontData.size
-  summary: >-
-    表示以磅为单位的字体大小（例如 11）。 如果 TextRange 包含不同字体大小的文本片段, 则返回 null。
-
-
-    \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-  isPreview: true
-  name: size
-  fullName: size
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'size?: number;'
-    return:
-      type:
-      - number
-- uid: excel.Excel.Interfaces.ShapeFontData.underline
-  summary: >-
-    应用于字体的下划线类型。 如果 TextRange 包含具有不同下划线样式的文本片段, 则返回 null。 有关详细信息，请参阅 Excel.ShapeFontUnderlineStyle。
-
-
-    \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-  isPreview: true
-  name: underline
-  fullName: underline
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'underline?: Excel.ShapeFontUnderlineStyle | "None" | "Single" | "Double" | "Heavy" | "Dotted" | "DottedHeavy" | "Dash" | "DashHeavy" | "DashLong" | "DashLongHeavy" | "DotDash" | "DotDashHeavy" | "DotDotDash" | "DotDotDashHeavy" | "Wavy" | "WavyHeavy" | "WavyDouble";'
-    return:
-      type:
-      - Excel.ShapeFontUnderlineStyle | "None" | "Single" | "Double" | "Heavy" | "Dotted" | "DottedHeavy" | "Dash" | "DashHeavy" | "DashLong" | "DashLongHeavy" | "DotDash" | "DotDashHeavy" | "DotDotDash" | "DotDotDashHeavy" | "Wavy" | "WavyHeavy" | "WavyDouble"
+      \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    isPreview: true
+    name: underline
+    fullName: underline
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'underline?: Excel.ShapeFontUnderlineStyle | "None" | "Single" | "Double" | "Heavy" | "Dotted" | "DottedHeavy" | "Dash" | "DashHeavy" | "DashLong" | "DashLongHeavy" | "DotDash" | "DotDashHeavy" | "DotDotDash" | "DotDotDashHeavy" | "Wavy" | "WavyHeavy" | "WavyDouble";'
+      return:
+        type:
+          - Excel.ShapeFontUnderlineStyle | "None" | "Single" | "Double" | "Heavy" | "Dotted" | "DottedHeavy" | "Dash" | "DashHeavy" | "DashLong" | "DashLongHeavy" | "DotDash" | "DotDashHeavy" | "DotDotDash" | "DotDotDashHeavy" | "Wavy" | "WavyHeavy" | "WavyDouble"
