--- a/docs/docs-ref-autogen/excel/excel.interfaces.shapegroupdata.yml
+++ b/docs/docs-ref-autogen/excel/excel.interfaces.shapegroupdata.yml
@@ -1,53 +1,45 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 400593452c9477a785b691df4aa318f77b46038f
-ms.sourcegitcommit: 5e31602ed9cbddfcff2768b7ed69dd4821440b90
-ms.translationtype: MT
-ms.contentlocale: zh-CN
-ms.lasthandoff: 03/14/2019
-ms.locfileid: "30575583"
 items:
-- uid: excel.Excel.Interfaces.ShapeGroupData
-  summary: 描述通过调用 "shapeGroup ()" 返回的数据的接口。
-  name: Excel.Interfaces.ShapeGroupData
-  fullName: Excel.Interfaces.ShapeGroupData
-  langs:
-  - typeScript
-  type: interface
-  package: excel
-  children:
-  - excel.Excel.Interfaces.ShapeGroupData.id
-  - excel.Excel.Interfaces.ShapeGroupData.shapes
-- uid: excel.Excel.Interfaces.ShapeGroupData.id
-  summary: >-
-    表示形状标识符。 只读。
+  - uid: excel.Excel.Interfaces.ShapeGroupData
+    summary: 描述通过调用 "shapeGroup ()" 返回的数据的接口。
+    name: Excel.Interfaces.ShapeGroupData
+    fullName: Excel.Interfaces.ShapeGroupData
+    langs:
+      - typeScript
+    type: interface
+    package: excel
+    children:
+      - excel.Excel.Interfaces.ShapeGroupData.id
+      - excel.Excel.Interfaces.ShapeGroupData.shapes
+  - uid: excel.Excel.Interfaces.ShapeGroupData.id
+    summary: |-
+      表示形状标识符。 只读。
 
+      \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    isPreview: true
+    name: id
+    fullName: id
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'id?: string;'
+      return:
+        type:
+          - string
+  - uid: excel.Excel.Interfaces.ShapeGroupData.shapes
+    summary: |-
+      返回 Shape 对象的集合。 只读。
 
-    \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-  isPreview: true
-  name: id
-  fullName: id
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'id?: string;'
-    return:
-      type:
-      - string
-- uid: excel.Excel.Interfaces.ShapeGroupData.shapes
-  summary: >-
-    返回 Shape 对象的集合。 只读。
-
-
-    \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-  isPreview: true
-  name: shapes
-  fullName: shapes
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'shapes?: Excel.Interfaces.ShapeData[];'
-    return:
-      type:
-      - Excel.Interfaces.ShapeData[]
+      \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    isPreview: true
+    name: shapes
+    fullName: shapes
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'shapes?: Excel.Interfaces.ShapeData[];'
+      return:
+        type:
+          - 'Excel.Interfaces.ShapeData[]'
