--- a/docs/docs-ref-autogen/excel/excel.interfaces.shapelineformatdata.yml
+++ b/docs/docs-ref-autogen/excel/excel.interfaces.shapelineformatdata.yml
@@ -1,125 +1,113 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 82fa1b9d9ab131c88f98beb68300de28ac389385
-ms.sourcegitcommit: 5e31602ed9cbddfcff2768b7ed69dd4821440b90
-ms.translationtype: MT
-ms.contentlocale: zh-CN
-ms.lasthandoff: 03/14/2019
-ms.locfileid: "30575877"
 items:
-- uid: excel.Excel.Interfaces.ShapeLineFormatData
-  summary: 描述通过调用 "shapeLineFormat ()" 返回的数据的接口。
-  name: Excel.Interfaces.ShapeLineFormatData
-  fullName: Excel.Interfaces.ShapeLineFormatData
-  langs:
-  - typeScript
-  type: interface
-  package: excel
-  children:
-  - excel.Excel.Interfaces.ShapeLineFormatData.color
-  - excel.Excel.Interfaces.ShapeLineFormatData.dashStyle
-  - excel.Excel.Interfaces.ShapeLineFormatData.style
-  - excel.Excel.Interfaces.ShapeLineFormatData.transparency
-  - excel.Excel.Interfaces.ShapeLineFormatData.visible
-  - excel.Excel.Interfaces.ShapeLineFormatData.weight
-- uid: excel.Excel.Interfaces.ShapeLineFormatData.color
-  summary: >-
-    代表 html 颜色格式的线条颜色, 格式\#RRGGBB (例如 "FFA500") 或命名的 HTML 颜色 (例如 "橙色")。
+  - uid: excel.Excel.Interfaces.ShapeLineFormatData
+    summary: 描述通过调用 "shapeLineFormat ()" 返回的数据的接口。
+    name: Excel.Interfaces.ShapeLineFormatData
+    fullName: Excel.Interfaces.ShapeLineFormatData
+    langs:
+      - typeScript
+    type: interface
+    package: excel
+    children:
+      - excel.Excel.Interfaces.ShapeLineFormatData.color
+      - excel.Excel.Interfaces.ShapeLineFormatData.dashStyle
+      - excel.Excel.Interfaces.ShapeLineFormatData.style
+      - excel.Excel.Interfaces.ShapeLineFormatData.transparency
+      - excel.Excel.Interfaces.ShapeLineFormatData.visible
+      - excel.Excel.Interfaces.ShapeLineFormatData.weight
+  - uid: excel.Excel.Interfaces.ShapeLineFormatData.color
+    summary: |-
+      代表 html 颜色格式的线条颜色, 格式\#RRGGBB (例如 "FFA500") 或命名的 HTML 颜色 (例如 "橙色")。
 
+      \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    isPreview: true
+    name: color
+    fullName: color
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'color?: string;'
+      return:
+        type:
+          - string
+  - uid: excel.Excel.Interfaces.ShapeLineFormatData.dashStyle
+    summary: |-
+      表示形状的线条样式。 当线条不可见或短划线样式不一致时，返回 null。 有关详细信息，请参阅 Excel.ShapeLineStyle。
 
-    \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-  isPreview: true
-  name: color
-  fullName: color
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'color?: string;'
-    return:
-      type:
-      - string
-- uid: excel.Excel.Interfaces.ShapeLineFormatData.dashStyle
-  summary: >-
-    表示形状的线条样式。 如果行不可见或不一致的虚线样式, 则返回 null。 有关详细信息，请参阅 Excel.ShapeLineStyle。
+      \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    isPreview: true
+    name: dashStyle
+    fullName: dashStyle
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'dashStyle?: Excel.ShapeLineDashStyle | "Dash" | "DashDot" | "DashDotDot" | "LongDash" | "LongDashDot" | "RoundDot" | "Solid" | "SquareDot" | "LongDashDotDot" | "SystemDash" | "SystemDot" | "SystemDashDot";'
+      return:
+        type:
+          - Excel.ShapeLineDashStyle | "Dash" | "DashDot" | "DashDotDot" | "LongDash" | "LongDashDot" | "RoundDot" | "Solid" | "SquareDot" | "LongDashDotDot" | "SystemDash" | "SystemDot" | "SystemDashDot"
+  - uid: excel.Excel.Interfaces.ShapeLineFormatData.style
+    summary: |-
+      表示形状的线条样式。 当线条不可见或样式不一致时，返回 null。 有关详细信息，请参阅 Excel.ShapeLineStyle。
 
+      \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    isPreview: true
+    name: style
+    fullName: style
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'style?: Excel.ShapeLineStyle | "Single" | "ThickBetweenThin" | "ThickThin" | "ThinThick" | "ThinThin";'
+      return:
+        type:
+          - Excel.ShapeLineStyle | "Single" | "ThickBetweenThin" | "ThickThin" | "ThinThick" | "ThinThin"
+  - uid: excel.Excel.Interfaces.ShapeLineFormatData.transparency
+    summary: |-
+      将指定线条的透明度表示为从 0.0（不透明）到 1.0（清晰）的值。 当形状的透明度不一致时，返回 null。
 
-    \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-  isPreview: true
-  name: dashStyle
-  fullName: dashStyle
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'dashStyle?: Excel.ShapeLineDashStyle | "Dash" | "DashDot" | "DashDotDot" | "LongDash" | "LongDashDot" | "RoundDot" | "Solid" | "SquareDot" | "LongDashDotDot" | "SystemDash" | "SystemDot" | "SystemDashDot";'
-    return:
-      type:
-      - Excel.ShapeLineDashStyle | "Dash" | "DashDot" | "DashDotDot" | "LongDash" | "LongDashDot" | "RoundDot" | "Solid" | "SquareDot" | "LongDashDotDot" | "SystemDash" | "SystemDot" | "SystemDashDot"
-- uid: excel.Excel.Interfaces.ShapeLineFormatData.style
-  summary: >-
-    表示形状的线条样式。 如果行不可见或样式不一致, 则返回 null。 有关详细信息，请参阅 Excel.ShapeLineStyle。
+      \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    isPreview: true
+    name: transparency
+    fullName: transparency
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'transparency?: number;'
+      return:
+        type:
+          - number
+  - uid: excel.Excel.Interfaces.ShapeLineFormatData.visible
+    summary: |-
+      表示形状元素的线条格式是否可见。 当形状的可见性不一致时，返回 null。
 
+      \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    isPreview: true
+    name: visible
+    fullName: visible
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'visible?: boolean;'
+      return:
+        type:
+          - boolean
+  - uid: excel.Excel.Interfaces.ShapeLineFormatData.weight
+    summary: |-
+      表示线条的粗细（以磅为单位）。 当线条不可见或线条粗细不一致时，返回 null。
 
-    \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-  isPreview: true
-  name: style
-  fullName: style
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'style?: Excel.ShapeLineStyle | "Single" | "ThickBetweenThin" | "ThickThin" | "ThinThick" | "ThinThin";'
-    return:
-      type:
-      - Excel.ShapeLineStyle | "Single" | "ThickBetweenThin" | "ThickThin" | "ThinThick" | "ThinThin"
-- uid: excel.Excel.Interfaces.ShapeLineFormatData.transparency
-  summary: >-
-    将指定线条的透明度表示为从 0.0（不透明）到 1.0（清晰）的值。 如果形状具有不一致的透明胶片, 则返回 null。
-
-
-    \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-  isPreview: true
-  name: transparency
-  fullName: transparency
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'transparency?: number;'
-    return:
-      type:
-      - number
-- uid: excel.Excel.Interfaces.ShapeLineFormatData.visible
-  summary: >-
-    表示 shape 元素的行格式是否可见。 如果形状具有不一致的 visibilities, 则返回 null。
-
-
-    \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-  isPreview: true
-  name: visible
-  fullName: visible
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'visible?: boolean;'
-    return:
-      type:
-      - boolean
-- uid: excel.Excel.Interfaces.ShapeLineFormatData.weight
-  summary: >-
-    表示线条的粗细, 以磅为单位。 如果行不可见或线条粗细不一致, 则返回 null。
-
-
-    \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-  isPreview: true
-  name: weight
-  fullName: weight
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'weight?: number;'
-    return:
-      type:
-      - number
+      \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    isPreview: true
+    name: weight
+    fullName: weight
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'weight?: number;'
+      return:
+        type:
+          - number
