--- a/docs/docs-ref-autogen/excel_release/excel.chartdeletedeventargs.yml
+++ b/docs/docs-ref-autogen/excel_release/excel.chartdeletedeventargs.yml
@@ -1,89 +1,78 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 5608a7e1aa844b7f83f0bbb6c8347c861d6cc7d9
-ms.sourcegitcommit: e9bfba6ec767e9d34fd1cf7b38c30f689617900a
-ms.translationtype: MT
-ms.contentlocale: zh-CN
-ms.lasthandoff: 02/20/2019
-ms.locfileid: "30111332"
 items:
-- uid: excel_release.Excel.ChartDeletedEventArgs
-  summary: >-
-    提供有关引发了已删除事件的图表的信息。
+  - uid: excel_release.Excel.ChartDeletedEventArgs
+    summary: |-
+      提供有关引发了已删除事件的图表的信息。
 
+      \[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    name: Excel.ChartDeletedEventArgs
+    fullName: Excel.ChartDeletedEventArgs
+    langs:
+      - typeScript
+    type: interface
+    package: excel_release
+    children:
+      - excel_release.Excel.ChartDeletedEventArgs.chartId
+      - excel_release.Excel.ChartDeletedEventArgs.source
+      - excel_release.Excel.ChartDeletedEventArgs.type
+      - excel_release.Excel.ChartDeletedEventArgs.worksheetId
+  - uid: excel_release.Excel.ChartDeletedEventArgs.chartId
+    summary: |-
+      获取已从工作表删除的图表的 ID。
 
-    \[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-  name: Excel.ChartDeletedEventArgs
-  fullName: Excel.ChartDeletedEventArgs
-  langs:
-  - typeScript
-  type: interface
-  package: excel_release
-  children:
-  - excel_release.Excel.ChartDeletedEventArgs.chartId
-  - excel_release.Excel.ChartDeletedEventArgs.source
-  - excel_release.Excel.ChartDeletedEventArgs.type
-  - excel_release.Excel.ChartDeletedEventArgs.worksheetId
-- uid: excel_release.Excel.ChartDeletedEventArgs.chartId
-  summary: >-
-    获取已从工作表删除的图表的 ID。
+      \[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    name: chartId
+    fullName: chartId
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'chartId: string;'
+      return:
+        type:
+          - string
+  - uid: excel_release.Excel.ChartDeletedEventArgs.source
+    summary: |-
+      获取事件源。 有关详细信息，请参阅 Excel.EventSource。
 
+      \[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    name: source
+    fullName: source
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'source: Excel.EventSource | "Local" | "Remote";'
+      return:
+        type:
+          - Excel.EventSource | "Local" | "Remote"
+  - uid: excel_release.Excel.ChartDeletedEventArgs.type
+    summary: |-
+      获取事件的类型。 有关详细信息，请参阅 Excel.EventType。
 
-    \[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-  name: chartId
-  fullName: chartId
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'chartId: string;'
-    return:
-      type:
-      - string
-- uid: excel_release.Excel.ChartDeletedEventArgs.source
-  summary: >-
-    获取事件源。 有关详细信息, 请参阅 "Excel. EventSource"。
+      \[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    name: type
+    fullName: type
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'type: "ChartDeleted";'
+      return:
+        type:
+          - '"ChartDeleted"'
+  - uid: excel_release.Excel.ChartDeletedEventArgs.worksheetId
+    summary: |-
+      获取已在其中删除图表的工作表的 ID。
 
-
-    \[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-  name: source
-  fullName: source
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'source: Excel.EventSource | "Local" | "Remote";'
-    return:
-      type:
-      - Excel.EventSource | "Local" | "Remote"
-- uid: excel_release.Excel.ChartDeletedEventArgs.type
-  summary: >-
-    获取事件的类型。 有关详细信息, 请参阅 "Excel. 事件"。
-
-
-    \[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-  name: type
-  fullName: type
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'type: "ChartDeleted";'
-    return:
-      type:
-      - "\"ChartDeleted\""
-- uid: excel_release.Excel.ChartDeletedEventArgs.worksheetId
-  summary: >-
-    获取已在其中删除图表的工作表的 ID。
-
-
-    \[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-  name: worksheetId
-  fullName: worksheetId
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'worksheetId: string;'
-    return:
-      type:
-      - string
+      \[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    name: worksheetId
+    fullName: worksheetId
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'worksheetId: string;'
+      return:
+        type:
+          - string
