--- a/docs/docs-ref-autogen/excel_release/excel.interfaces.chartpointscollectiondata.yml
+++ b/docs/docs-ref-autogen/excel_release/excel.interfaces.chartpointscollectiondata.yml
@@ -1,29 +1,23 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 57c99a4fbea0704b7da9cea3d3a7901e558a9103
-ms.sourcegitcommit: e9bfba6ec767e9d34fd1cf7b38c30f689617900a
-ms.translationtype: MT
-ms.contentlocale: zh-CN
-ms.lasthandoff: 02/20/2019
-ms.locfileid: "30114069"
 items:
-- uid: excel_release.Excel.Interfaces.ChartPointsCollectionData
-  summary: 描述通过调用 "chartPointsCollection ()" 返回的数据的接口。
-  name: Excel.Interfaces.ChartPointsCollectionData
-  fullName: Excel.Interfaces.ChartPointsCollectionData
-  langs:
-  - typeScript
-  type: interface
-  package: excel_release
-  children:
-  - excel_release.Excel.Interfaces.ChartPointsCollectionData.items
-- uid: excel_release.Excel.Interfaces.ChartPointsCollectionData.items
-  name: items
-  fullName: items
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'items?: Excel.Interfaces.ChartPointData[];'
-    return:
-      type:
-      - Excel.Interfaces.ChartPointData[]
+  - uid: excel_release.Excel.Interfaces.ChartPointsCollectionData
+    summary: 描述通过调用 "chartPointsCollection ()" 返回的数据的接口。
+    name: Excel.Interfaces.ChartPointsCollectionData
+    fullName: Excel.Interfaces.ChartPointsCollectionData
+    langs:
+      - typeScript
+    type: interface
+    package: excel_release
+    children:
+      - excel_release.Excel.Interfaces.ChartPointsCollectionData.items
+  - uid: excel_release.Excel.Interfaces.ChartPointsCollectionData.items
+    name: items
+    fullName: items
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'items?: Excel.Interfaces.ChartPointData[];'
+      return:
+        type:
+          - 'Excel.Interfaces.ChartPointData[]'
