--- a/docs/docs-ref-autogen/excel_release/excel.interfaces.chartpointscollectionloadoptions.yml
+++ b/docs/docs-ref-autogen/excel_release/excel.interfaces.chartpointscollectionloadoptions.yml
@@ -1,169 +1,154 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 58e534b063d083dbc71cb8796b7bb52ce6683f42
-ms.sourcegitcommit: e9bfba6ec767e9d34fd1cf7b38c30f689617900a
-ms.translationtype: MT
-ms.contentlocale: zh-CN
-ms.lasthandoff: 02/20/2019
-ms.locfileid: "30114272"
 items:
-- uid: excel_release.Excel.Interfaces.ChartPointsCollectionLoadOptions
-  summary: >-
-    图表中某个系列的所有图表点的集合。
+  - uid: excel_release.Excel.Interfaces.ChartPointsCollectionLoadOptions
+    summary: |-
+      图表中某个系列的所有图表点的集合。
 
+      \[[API 集: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    name: Excel.Interfaces.ChartPointsCollectionLoadOptions
+    fullName: Excel.Interfaces.ChartPointsCollectionLoadOptions
+    langs:
+      - typeScript
+    type: interface
+    package: excel_release
+    children:
+      - excel_release.Excel.Interfaces.ChartPointsCollectionLoadOptions.$all
+      - excel_release.Excel.Interfaces.ChartPointsCollectionLoadOptions.dataLabel
+      - excel_release.Excel.Interfaces.ChartPointsCollectionLoadOptions.format
+      - excel_release.Excel.Interfaces.ChartPointsCollectionLoadOptions.hasDataLabel
+      - excel_release.Excel.Interfaces.ChartPointsCollectionLoadOptions.markerBackgroundColor
+      - excel_release.Excel.Interfaces.ChartPointsCollectionLoadOptions.markerForegroundColor
+      - excel_release.Excel.Interfaces.ChartPointsCollectionLoadOptions.markerSize
+      - excel_release.Excel.Interfaces.ChartPointsCollectionLoadOptions.markerStyle
+      - excel_release.Excel.Interfaces.ChartPointsCollectionLoadOptions.value
+  - uid: excel_release.Excel.Interfaces.ChartPointsCollectionLoadOptions.$all
+    name: $all
+    fullName: $all
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: '$all?: boolean;'
+      return:
+        type:
+          - boolean
+  - uid: excel_release.Excel.Interfaces.ChartPointsCollectionLoadOptions.dataLabel
+    summary: |-
+      对于集合中的每一项: 返回图表点的数据标签。
 
-    \[[API 集: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-  name: Excel.Interfaces.ChartPointsCollectionLoadOptions
-  fullName: Excel.Interfaces.ChartPointsCollectionLoadOptions
-  langs:
-  - typeScript
-  type: interface
-  package: excel_release
-  children:
-  - excel_release.Excel.Interfaces.ChartPointsCollectionLoadOptions.$all
-  - excel_release.Excel.Interfaces.ChartPointsCollectionLoadOptions.dataLabel
-  - excel_release.Excel.Interfaces.ChartPointsCollectionLoadOptions.format
-  - excel_release.Excel.Interfaces.ChartPointsCollectionLoadOptions.hasDataLabel
-  - excel_release.Excel.Interfaces.ChartPointsCollectionLoadOptions.markerBackgroundColor
-  - excel_release.Excel.Interfaces.ChartPointsCollectionLoadOptions.markerForegroundColor
-  - excel_release.Excel.Interfaces.ChartPointsCollectionLoadOptions.markerSize
-  - excel_release.Excel.Interfaces.ChartPointsCollectionLoadOptions.markerStyle
-  - excel_release.Excel.Interfaces.ChartPointsCollectionLoadOptions.value
-- uid: excel_release.Excel.Interfaces.ChartPointsCollectionLoadOptions.$all
-  name: $all
-  fullName: $all
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: '$all?: boolean;'
-    return:
-      type:
-      - boolean
-- uid: excel_release.Excel.Interfaces.ChartPointsCollectionLoadOptions.dataLabel
-  summary: >-
-    对于集合中的每一项: 返回图表点的数据标签。
+      \[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    name: dataLabel
+    fullName: dataLabel
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'dataLabel?: Excel.Interfaces.ChartDataLabelLoadOptions;'
+      return:
+        type:
+          - excel.Excel.Interfaces.ChartDataLabelLoadOptions
+  - uid: excel_release.Excel.Interfaces.ChartPointsCollectionLoadOptions.format
+    summary: |-
+      对于集合中的每一项: 封装格式属性图表点。
 
+      \[[API 集: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    name: format
+    fullName: format
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'format?: Excel.Interfaces.ChartPointFormatLoadOptions;'
+      return:
+        type:
+          - excel.Excel.Interfaces.ChartPointFormatLoadOptions
+  - uid: excel_release.Excel.Interfaces.ChartPointsCollectionLoadOptions.hasDataLabel
+    summary: |-
+      对于集合中的每一项: 表示数据点是否具有数据标签。 不适用于曲面图。
 
-    \[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-  name: dataLabel
-  fullName: dataLabel
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'dataLabel?: Excel.Interfaces.ChartDataLabelLoadOptions;'
-    return:
-      type:
-      - excel.Excel.Interfaces.ChartDataLabelLoadOptions
-- uid: excel_release.Excel.Interfaces.ChartPointsCollectionLoadOptions.format
-  summary: >-
-    对于集合中的每一项: 封装格式属性图表点。
+      \[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    name: hasDataLabel
+    fullName: hasDataLabel
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'hasDataLabel?: boolean;'
+      return:
+        type:
+          - boolean
+  - uid: excel_release.Excel.Interfaces.ChartPointsCollectionLoadOptions.markerBackgroundColor
+    summary: |-
+      对于集合中的每一项: 数据点的标记背景色的 HTML 颜色代码表示形式。 例如， \#FF0000 表示红色。
 
+      \[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    name: markerBackgroundColor
+    fullName: markerBackgroundColor
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'markerBackgroundColor?: boolean;'
+      return:
+        type:
+          - boolean
+  - uid: excel_release.Excel.Interfaces.ChartPointsCollectionLoadOptions.markerForegroundColor
+    summary: |-
+      对于集合中的每一项: 数据点的标记前景色的 HTML 颜色代码表示形式。 例如， \#FF0000 表示红色。
 
-    \[[API 集: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-  name: format
-  fullName: format
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'format?: Excel.Interfaces.ChartPointFormatLoadOptions;'
-    return:
-      type:
-      - excel.Excel.Interfaces.ChartPointFormatLoadOptions
-- uid: excel_release.Excel.Interfaces.ChartPointsCollectionLoadOptions.hasDataLabel
-  summary: >-
-    对于集合中的每一项: 表示数据点是否具有数据标签。 不适用于曲面图。
+      \[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    name: markerForegroundColor
+    fullName: markerForegroundColor
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'markerForegroundColor?: boolean;'
+      return:
+        type:
+          - boolean
+  - uid: excel_release.Excel.Interfaces.ChartPointsCollectionLoadOptions.markerSize
+    summary: |-
+      对于集合中的每一项: 表示数据点的标记大小。
 
+      \[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    name: markerSize
+    fullName: markerSize
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'markerSize?: boolean;'
+      return:
+        type:
+          - boolean
+  - uid: excel_release.Excel.Interfaces.ChartPointsCollectionLoadOptions.markerStyle
+    summary: |-
+      对于集合中的每一项: 表示图表数据点的标记样式。 有关详细信息, 请参阅 ChartMarkerStyle。
 
-    \[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-  name: hasDataLabel
-  fullName: hasDataLabel
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'hasDataLabel?: boolean;'
-    return:
-      type:
-      - boolean
-- uid: excel_release.Excel.Interfaces.ChartPointsCollectionLoadOptions.markerBackgroundColor
-  summary: >-
-    对于集合中的每一项: 数据点的标记背景色的 HTML 颜色代码表示形式。 例如， \#FF0000 表示红色。
+      \[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    name: markerStyle
+    fullName: markerStyle
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'markerStyle?: boolean;'
+      return:
+        type:
+          - boolean
+  - uid: excel_release.Excel.Interfaces.ChartPointsCollectionLoadOptions.value
+    summary: |-
+      对于集合中的每一项: 返回图表点的值。 只读。
 
-
-    \[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-  name: markerBackgroundColor
-  fullName: markerBackgroundColor
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'markerBackgroundColor?: boolean;'
-    return:
-      type:
-      - boolean
-- uid: excel_release.Excel.Interfaces.ChartPointsCollectionLoadOptions.markerForegroundColor
-  summary: >-
-    对于集合中的每一项: 数据点的标记前景色的 HTML 颜色代码表示形式。 例如， \#FF0000 表示红色。
-
-
-    \[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-  name: markerForegroundColor
-  fullName: markerForegroundColor
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'markerForegroundColor?: boolean;'
-    return:
-      type:
-      - boolean
-- uid: excel_release.Excel.Interfaces.ChartPointsCollectionLoadOptions.markerSize
-  summary: >-
-    对于集合中的每一项: 表示数据点的标记大小。
-
-
-    \[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-  name: markerSize
-  fullName: markerSize
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'markerSize?: boolean;'
-    return:
-      type:
-      - boolean
-- uid: excel_release.Excel.Interfaces.ChartPointsCollectionLoadOptions.markerStyle
-  summary: >-
-    对于集合中的每一项: 表示图表数据点的标记样式。 有关详细信息, 请参阅 ChartMarkerStyle。
-
-
-    \[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-  name: markerStyle
-  fullName: markerStyle
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'markerStyle?: boolean;'
-    return:
-      type:
-      - boolean
-- uid: excel_release.Excel.Interfaces.ChartPointsCollectionLoadOptions.value
-  summary: >-
-    对于集合中的每一项: 返回图表点的值。 只读。
-
-
-    \[[API 集: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-  name: value
-  fullName: value
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'value?: boolean;'
-    return:
-      type:
-      - boolean
+      \[[API 集: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    name: value
+    fullName: value
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'value?: boolean;'
+      return:
+        type:
+          - boolean
