--- a/docs/docs-ref-autogen/excel_release/excel.interfaces.chartseriesformatupdatedata.yml
+++ b/docs/docs-ref-autogen/excel_release/excel.interfaces.chartseriesformatupdatedata.yml
@@ -1,34 +1,27 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 97a09727ba9e1dd3f70f36ed3006e646909fff58
-ms.sourcegitcommit: e9bfba6ec767e9d34fd1cf7b38c30f689617900a
-ms.translationtype: MT
-ms.contentlocale: zh-CN
-ms.lasthandoff: 02/20/2019
-ms.locfileid: "30117700"
 items:
-- uid: excel_release.Excel.Interfaces.ChartSeriesFormatUpdateData
-  summary: 用于更新 ChartSeriesFormat 对象上的数据的接口, 用于在 "ChartSeriesFormat" 中使用 (<!-- -->{...}<!-- -->)".
-  name: Excel.Interfaces.ChartSeriesFormatUpdateData
-  fullName: Excel.Interfaces.ChartSeriesFormatUpdateData
-  langs:
-  - typeScript
-  type: interface
-  package: excel_release
-  children:
-  - excel_release.Excel.Interfaces.ChartSeriesFormatUpdateData.line
-- uid: excel_release.Excel.Interfaces.ChartSeriesFormatUpdateData.line
-  summary: >-
-    表示线条格式。
+  - uid: excel_release.Excel.Interfaces.ChartSeriesFormatUpdateData
+    summary: '一个用于更新 ChartSeriesFormat 对象上的数据的接口, 可用于 "ChartSeriesFormat (<!-- -->{ ... }<!-- -->)".'
+    name: Excel.Interfaces.ChartSeriesFormatUpdateData
+    fullName: Excel.Interfaces.ChartSeriesFormatUpdateData
+    langs:
+      - typeScript
+    type: interface
+    package: excel_release
+    children:
+      - excel_release.Excel.Interfaces.ChartSeriesFormatUpdateData.line
+  - uid: excel_release.Excel.Interfaces.ChartSeriesFormatUpdateData.line
+    summary: |-
+      表示线条格式。
 
-
-    \[[API 集: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-  name: line
-  fullName: line
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'line?: Excel.Interfaces.ChartLineFormatUpdateData;'
-    return:
-      type:
-      - excel.Excel.Interfaces.ChartLineFormatUpdateData
+      \[[API 集: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    name: line
+    fullName: line
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'line?: Excel.Interfaces.ChartLineFormatUpdateData;'
+      return:
+        type:
+          - excel.Excel.Interfaces.ChartLineFormatUpdateData
