--- a/docs/docs-ref-autogen/excel_release/excel.interfaces.charttrendlinelabelupdatedata.yml
+++ b/docs/docs-ref-autogen/excel_release/excel.interfaces.charttrendlinelabelupdatedata.yml
@@ -1,187 +1,171 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 53f4a79b8c6eaa0267f4d053228465dc0e9c3b06
-ms.sourcegitcommit: e9bfba6ec767e9d34fd1cf7b38c30f689617900a
-ms.translationtype: MT
-ms.contentlocale: zh-CN
-ms.lasthandoff: 02/20/2019
-ms.locfileid: "30109848"
 items:
-- uid: excel_release.Excel.Interfaces.ChartTrendlineLabelUpdateData
-  summary: 用于更新 ChartTrendlineLabel 对象上的数据的接口, 用于在 "ChartTrendlineLabel" 中使用 (<!-- -->{...}<!-- -->)".
-  name: Excel.Interfaces.ChartTrendlineLabelUpdateData
-  fullName: Excel.Interfaces.ChartTrendlineLabelUpdateData
-  langs:
-  - typeScript
-  type: interface
-  package: excel_release
-  children:
-  - excel_release.Excel.Interfaces.ChartTrendlineLabelUpdateData.autoText
-  - excel_release.Excel.Interfaces.ChartTrendlineLabelUpdateData.format
-  - excel_release.Excel.Interfaces.ChartTrendlineLabelUpdateData.formula
-  - excel_release.Excel.Interfaces.ChartTrendlineLabelUpdateData.horizontalAlignment
-  - excel_release.Excel.Interfaces.ChartTrendlineLabelUpdateData.left
-  - excel_release.Excel.Interfaces.ChartTrendlineLabelUpdateData.numberFormat
-  - excel_release.Excel.Interfaces.ChartTrendlineLabelUpdateData.text
-  - excel_release.Excel.Interfaces.ChartTrendlineLabelUpdateData.textOrientation
-  - excel_release.Excel.Interfaces.ChartTrendlineLabelUpdateData.top
-  - excel_release.Excel.Interfaces.ChartTrendlineLabelUpdateData.verticalAlignment
-- uid: excel_release.Excel.Interfaces.ChartTrendlineLabelUpdateData.autoText
-  summary: >-
-    该布尔值表示趋势线标签是否根据上下文自动生成相应的文本。
+  - uid: excel_release.Excel.Interfaces.ChartTrendlineLabelUpdateData
+    summary: '一个用于更新 ChartTrendlineLabel 对象上的数据的接口, 可用于 "ChartTrendlineLabel (<!-- -->{ ... }<!-- -->)".'
+    name: Excel.Interfaces.ChartTrendlineLabelUpdateData
+    fullName: Excel.Interfaces.ChartTrendlineLabelUpdateData
+    langs:
+      - typeScript
+    type: interface
+    package: excel_release
+    children:
+      - excel_release.Excel.Interfaces.ChartTrendlineLabelUpdateData.autoText
+      - excel_release.Excel.Interfaces.ChartTrendlineLabelUpdateData.format
+      - excel_release.Excel.Interfaces.ChartTrendlineLabelUpdateData.formula
+      - excel_release.Excel.Interfaces.ChartTrendlineLabelUpdateData.horizontalAlignment
+      - excel_release.Excel.Interfaces.ChartTrendlineLabelUpdateData.left
+      - excel_release.Excel.Interfaces.ChartTrendlineLabelUpdateData.numberFormat
+      - excel_release.Excel.Interfaces.ChartTrendlineLabelUpdateData.text
+      - excel_release.Excel.Interfaces.ChartTrendlineLabelUpdateData.textOrientation
+      - excel_release.Excel.Interfaces.ChartTrendlineLabelUpdateData.top
+      - excel_release.Excel.Interfaces.ChartTrendlineLabelUpdateData.verticalAlignment
+  - uid: excel_release.Excel.Interfaces.ChartTrendlineLabelUpdateData.autoText
+    summary: |-
+      该布尔值表示趋势线标签是否根据上下文自动生成相应的文本。
 
+      \[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    name: autoText
+    fullName: autoText
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'autoText?: boolean;'
+      return:
+        type:
+          - boolean
+  - uid: excel_release.Excel.Interfaces.ChartTrendlineLabelUpdateData.format
+    summary: |-
+      表示图表趋势线标签的格式。
 
-    \[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-  name: autoText
-  fullName: autoText
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'autoText?: boolean;'
-    return:
-      type:
-      - boolean
-- uid: excel_release.Excel.Interfaces.ChartTrendlineLabelUpdateData.format
-  summary: >-
-    表示图表趋势线标签的格式。
+      \[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    name: format
+    fullName: format
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'format?: Excel.Interfaces.ChartTrendlineLabelFormatUpdateData;'
+      return:
+        type:
+          - excel.Excel.Interfaces.ChartTrendlineLabelFormatUpdateData
+  - uid: excel_release.Excel.Interfaces.ChartTrendlineLabelUpdateData.formula
+    summary: |-
+      该字符串值表示采用 A1 表示法的图表趋势线标签的公式。
 
+      \[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    name: formula
+    fullName: formula
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'formula?: string;'
+      return:
+        type:
+          - string
+  - uid: excel_release.Excel.Interfaces.ChartTrendlineLabelUpdateData.horizontalAlignment
+    summary: |-
+      表示图表趋势线标签水平对齐。 有关详细信息, 请参阅 ChartTextHorizontalAlignment。 仅当 TextOrientation 的趋势线标签为90、-90 或180时, 此属性才有效。
 
-    \[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-  name: format
-  fullName: format
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'format?: Excel.Interfaces.ChartTrendlineLabelFormatUpdateData;'
-    return:
-      type:
-      - excel.Excel.Interfaces.ChartTrendlineLabelFormatUpdateData
-- uid: excel_release.Excel.Interfaces.ChartTrendlineLabelUpdateData.formula
-  summary: >-
-    该字符串值表示采用 A1 表示法的图表趋势线标签的公式。
+      \[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    name: horizontalAlignment
+    fullName: horizontalAlignment
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'horizontalAlignment?: Excel.ChartTextHorizontalAlignment | "Center" | "Left" | "Right" | "Justify" | "Distributed";'
+      return:
+        type:
+          - Excel.ChartTextHorizontalAlignment | "Center" | "Left" | "Right" | "Justify" | "Distributed"
+  - uid: excel_release.Excel.Interfaces.ChartTrendlineLabelUpdateData.left
+    summary: |-
+      表示图表趋势线标签左边缘到图表区域左边缘的距离，以磅为单位。 如果图表趋势线标签不可见，则为 Null。
 
+      \[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    name: left
+    fullName: left
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'left?: number;'
+      return:
+        type:
+          - number
+  - uid: excel_release.Excel.Interfaces.ChartTrendlineLabelUpdateData.numberFormat
+    summary: |-
+      该字符串值表示趋势线标签的格式代码。
 
-    \[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-  name: formula
-  fullName: formula
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'formula?: string;'
-    return:
-      type:
-      - string
-- uid: excel_release.Excel.Interfaces.ChartTrendlineLabelUpdateData.horizontalAlignment
-  summary: >-
-    表示图表趋势线标签水平对齐。 有关详细信息, 请参阅 ChartTextHorizontalAlignment。 仅当 TextOrientation 的趋势线标签为90、-90 或180时, 此属性才有效。
+      \[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    name: numberFormat
+    fullName: numberFormat
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'numberFormat?: string;'
+      return:
+        type:
+          - string
+  - uid: excel_release.Excel.Interfaces.ChartTrendlineLabelUpdateData.text
+    summary: |-
+      该字符串表示图表上的趋势线标签文本。
 
+      \[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    name: text
+    fullName: text
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'text?: string;'
+      return:
+        type:
+          - string
+  - uid: excel_release.Excel.Interfaces.ChartTrendlineLabelUpdateData.textOrientation
+    summary: |-
+      表示图表趋势线标签的文本方向。 此值应是 -90 到 90 或 180（垂直文本）之间的整数。
 
-    \[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-  name: horizontalAlignment
-  fullName: horizontalAlignment
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'horizontalAlignment?: Excel.ChartTextHorizontalAlignment | "Center" | "Left" | "Right" | "Justify" | "Distributed";'
-    return:
-      type:
-      - Excel.ChartTextHorizontalAlignment | "Center" | "Left" | "Right" | "Justify" | "Distributed"
-- uid: excel_release.Excel.Interfaces.ChartTrendlineLabelUpdateData.left
-  summary: >-
-    表示图表趋势线标签左边缘到图表区域左边缘的距离，以磅为单位。 如果图表趋势线标签不可见，则为 Null。
+      \[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    name: textOrientation
+    fullName: textOrientation
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'textOrientation?: number;'
+      return:
+        type:
+          - number
+  - uid: excel_release.Excel.Interfaces.ChartTrendlineLabelUpdateData.top
+    summary: |-
+      表示图表趋势线标签上边缘到图表区域顶部的距离，以磅为单位。 如果图表趋势线标签不可见，则为 Null。
 
+      \[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    name: top
+    fullName: top
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'top?: number;'
+      return:
+        type:
+          - number
+  - uid: excel_release.Excel.Interfaces.ChartTrendlineLabelUpdateData.verticalAlignment
+    summary: |-
+      表示图表趋势线标签垂直对齐。 有关详细信息, 请参阅 ChartTextVerticalAlignment。 仅当 TextOrientation 的趋势线标签为0时, 此属性才有效。
 
-    \[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-  name: left
-  fullName: left
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'left?: number;'
-    return:
-      type:
-      - number
-- uid: excel_release.Excel.Interfaces.ChartTrendlineLabelUpdateData.numberFormat
-  summary: >-
-    该字符串值表示趋势线标签的格式代码。
-
-
-    \[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-  name: numberFormat
-  fullName: numberFormat
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'numberFormat?: string;'
-    return:
-      type:
-      - string
-- uid: excel_release.Excel.Interfaces.ChartTrendlineLabelUpdateData.text
-  summary: >-
-    该字符串表示图表上的趋势线标签文本。
-
-
-    \[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-  name: text
-  fullName: text
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'text?: string;'
-    return:
-      type:
-      - string
-- uid: excel_release.Excel.Interfaces.ChartTrendlineLabelUpdateData.textOrientation
-  summary: >-
-    表示图表趋势线标签的文本方向。 此值应是 -90 到 90 或 180（垂直文本）之间的整数。
-
-
-    \[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-  name: textOrientation
-  fullName: textOrientation
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'textOrientation?: number;'
-    return:
-      type:
-      - number
-- uid: excel_release.Excel.Interfaces.ChartTrendlineLabelUpdateData.top
-  summary: >-
-    表示图表趋势线标签上边缘到图表区域顶部的距离，以磅为单位。 如果图表趋势线标签不可见，则为 Null。
-
-
-    \[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-  name: top
-  fullName: top
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'top?: number;'
-    return:
-      type:
-      - number
-- uid: excel_release.Excel.Interfaces.ChartTrendlineLabelUpdateData.verticalAlignment
-  summary: >-
-    表示图表趋势线标签垂直对齐。 有关详细信息, 请参阅 ChartTextVerticalAlignment。 仅当 TextOrientation 的趋势线标签为0时, 此属性才有效。
-
-
-    \[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-  name: verticalAlignment
-  fullName: verticalAlignment
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'verticalAlignment?: Excel.ChartTextVerticalAlignment | "Center" | "Bottom" | "Top" | "Justify" | "Distributed";'
-    return:
-      type:
-      - Excel.ChartTextVerticalAlignment | "Center" | "Bottom" | "Top" | "Justify" | "Distributed"
+      \[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    name: verticalAlignment
+    fullName: verticalAlignment
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'verticalAlignment?: Excel.ChartTextVerticalAlignment | "Center" | "Bottom" | "Top" | "Justify" | "Distributed";'
+      return:
+        type:
+          - Excel.ChartTextVerticalAlignment | "Center" | "Bottom" | "Top" | "Justify" | "Distributed"
