--- a/docs/docs-ref-autogen/excel_release/excel.interfaces.colorscaleconditionalformatupdatedata.yml
+++ b/docs/docs-ref-autogen/excel_release/excel.interfaces.colorscaleconditionalformatupdatedata.yml
@@ -1,34 +1,27 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: e6f5177def2c82cb7b4c49ef1940c059ae6b5ad1
-ms.sourcegitcommit: e9bfba6ec767e9d34fd1cf7b38c30f689617900a
-ms.translationtype: MT
-ms.contentlocale: zh-CN
-ms.lasthandoff: 02/20/2019
-ms.locfileid: "30108532"
 items:
-- uid: excel_release.Excel.Interfaces.ColorScaleConditionalFormatUpdateData
-  summary: 用于更新 ColorScaleConditionalFormat 对象上的数据的接口, 用于在 "ColorScaleConditionalFormat" 中使用 (<!-- -->{...}<!-- -->)".
-  name: Excel.Interfaces.ColorScaleConditionalFormatUpdateData
-  fullName: Excel.Interfaces.ColorScaleConditionalFormatUpdateData
-  langs:
-  - typeScript
-  type: interface
-  package: excel_release
-  children:
-  - excel_release.Excel.Interfaces.ColorScaleConditionalFormatUpdateData.criteria
-- uid: excel_release.Excel.Interfaces.ColorScaleConditionalFormatUpdateData.criteria
-  summary: >-
-    色阶的条件。使用两点色阶时，中点可选。
+  - uid: excel_release.Excel.Interfaces.ColorScaleConditionalFormatUpdateData
+    summary: '一个用于更新 ColorScaleConditionalFormat 对象上的数据的接口, 可用于 "ColorScaleConditionalFormat (<!-- -->{ ... }<!-- -->)".'
+    name: Excel.Interfaces.ColorScaleConditionalFormatUpdateData
+    fullName: Excel.Interfaces.ColorScaleConditionalFormatUpdateData
+    langs:
+      - typeScript
+    type: interface
+    package: excel_release
+    children:
+      - excel_release.Excel.Interfaces.ColorScaleConditionalFormatUpdateData.criteria
+  - uid: excel_release.Excel.Interfaces.ColorScaleConditionalFormatUpdateData.criteria
+    summary: |-
+      色阶的条件。 使用两个点的色阶时, 中点是可选的。
 
-
-    \[[API 集: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-  name: criteria
-  fullName: criteria
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'criteria?: Excel.ConditionalColorScaleCriteria;'
-    return:
-      type:
-      - excel.Excel.ConditionalColorScaleCriteria
+      \[[API 集: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    name: criteria
+    fullName: criteria
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'criteria?: Excel.ConditionalColorScaleCriteria;'
+      return:
+        type:
+          - excel.Excel.ConditionalColorScaleCriteria
