--- a/docs/docs-ref-autogen/excel_release/excel.interfaces.worksheetcollectiondata.yml
+++ b/docs/docs-ref-autogen/excel_release/excel.interfaces.worksheetcollectiondata.yml
@@ -1,29 +1,23 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: b144353f49232fbb8036618f16ac42fa7618d76c
-ms.sourcegitcommit: e9bfba6ec767e9d34fd1cf7b38c30f689617900a
-ms.translationtype: MT
-ms.contentlocale: zh-CN
-ms.lasthandoff: 02/20/2019
-ms.locfileid: "30110387"
 items:
-- uid: excel_release.Excel.Interfaces.WorksheetCollectionData
-  summary: 描述通过调用 "worksheetCollection ()" 返回的数据的接口。
-  name: Excel.Interfaces.WorksheetCollectionData
-  fullName: Excel.Interfaces.WorksheetCollectionData
-  langs:
-  - typeScript
-  type: interface
-  package: excel_release
-  children:
-  - excel_release.Excel.Interfaces.WorksheetCollectionData.items
-- uid: excel_release.Excel.Interfaces.WorksheetCollectionData.items
-  name: items
-  fullName: items
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'items?: Excel.Interfaces.WorksheetData[];'
-    return:
-      type:
-      - Excel.Interfaces.WorksheetData[]
+  - uid: excel_release.Excel.Interfaces.WorksheetCollectionData
+    summary: 描述通过调用 "worksheetCollection ()" 返回的数据的接口。
+    name: Excel.Interfaces.WorksheetCollectionData
+    fullName: Excel.Interfaces.WorksheetCollectionData
+    langs:
+      - typeScript
+    type: interface
+    package: excel_release
+    children:
+      - excel_release.Excel.Interfaces.WorksheetCollectionData.items
+  - uid: excel_release.Excel.Interfaces.WorksheetCollectionData.items
+    name: items
+    fullName: items
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'items?: Excel.Interfaces.WorksheetData[];'
+      return:
+        type:
+          - 'Excel.Interfaces.WorksheetData[]'
