--- a/docs/docs-ref-autogen/outlook_1_4/office.coerciontypeoptions.yml
+++ b/docs/docs-ref-autogen/outlook_1_4/office.coerciontypeoptions.yml
@@ -1,28 +1,22 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 67f2839165e9f22b420fdc58cd120eca7e949df4
-ms.sourcegitcommit: d356f1545c328d4b59ce814fcab8191e4231f1dc
-ms.translationtype: MT
-ms.contentlocale: zh-CN
-ms.lasthandoff: 02/13/2019
-ms.locfileid: "29980868"
 items:
-- uid: Outlook_1_4.Office.CoercionTypeOptions
-  name: Office.CoercionTypeOptions
-  fullName: Office.CoercionTypeOptions
-  langs:
-  - typeScript
-  type: interface
-  package: Outlook_1_4
-  children:
-  - Outlook_1_4.Office.CoercionTypeOptions.coercionType
-- uid: Outlook_1_4.Office.CoercionTypeOptions.coercionType
-  name: coercionType
-  fullName: coercionType
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'coercionType?: Office.CoercionType;'
-    return:
-      type:
-      - Office.CoercionType
+  - uid: outlook.Office.CoercionTypeOptions
+    name: Office.CoercionTypeOptions
+    fullName: Office.CoercionTypeOptions
+    langs:
+      - typeScript
+    type: interface
+    package: outlook
+    children:
+      - outlook.Office.CoercionTypeOptions.coercionType
+  - uid: outlook.Office.CoercionTypeOptions.coercionType
+    name: coercionType
+    fullName: coercionType
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'coercionType?: Office.CoercionType;'
+      return:
+        type:
+          - Office.CoercionType
