--- a/docs/docs-ref-autogen/visio/visio.interfaces.documentviewloadoptions.yml
+++ b/docs/docs-ref-autogen/visio/visio.interfaces.documentviewloadoptions.yml
@@ -1,101 +1,106 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: b8a7222c84dca05475edcd1092f70402190b887c
-ms.sourcegitcommit: d356f1545c328d4b59ce814fcab8191e4231f1dc
-ms.translationtype: MT
-ms.contentlocale: zh-CN
-ms.lasthandoff: 02/13/2019
-ms.locfileid: "29984574"
 items:
-- uid: visio.Visio.Interfaces.DocumentViewLoadOptions
-  summary: >-
-    表示 DocumentView 类。
+  - uid: visio.Visio.Interfaces.DocumentViewLoadOptions
+    summary: |-
+      表示 DocumentView 类。
 
+      \[[API 集: 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]
+    name: Visio.Interfaces.DocumentViewLoadOptions
+    fullName: Visio.Interfaces.DocumentViewLoadOptions
+    langs:
+      - typeScript
+    type: interface
+    package: visio
+    children:
+      - visio.Visio.Interfaces.DocumentViewLoadOptions.$all
+      - visio.Visio.Interfaces.DocumentViewLoadOptions.disableHyperlinks
+      - visio.Visio.Interfaces.DocumentViewLoadOptions.disablePan
+      - visio.Visio.Interfaces.DocumentViewLoadOptions.disablePanZoomWindow
+      - visio.Visio.Interfaces.DocumentViewLoadOptions.disableZoom
+      - visio.Visio.Interfaces.DocumentViewLoadOptions.hideDiagramBoundary
+  - uid: visio.Visio.Interfaces.DocumentViewLoadOptions.$all
+    name: $all
+    fullName: $all
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: '$all?: boolean;'
+      return:
+        type:
+          - boolean
+  - uid: visio.Visio.Interfaces.DocumentViewLoadOptions.disableHyperlinks
+    summary: |-
+      禁用超链接。
 
-    \[[API 集： 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]
-  name: Visio.Interfaces.DocumentViewLoadOptions
-  fullName: Visio.Interfaces.DocumentViewLoadOptions
-  langs:
-  - typeScript
-  type: interface
-  package: visio
-  children:
-  - visio.Visio.Interfaces.DocumentViewLoadOptions.$all
-  - visio.Visio.Interfaces.DocumentViewLoadOptions.disableHyperlinks
-  - visio.Visio.Interfaces.DocumentViewLoadOptions.disablePan
-  - visio.Visio.Interfaces.DocumentViewLoadOptions.disableZoom
-  - visio.Visio.Interfaces.DocumentViewLoadOptions.hideDiagramBoundary
-- uid: visio.Visio.Interfaces.DocumentViewLoadOptions.$all
-  name: $all
-  fullName: $all
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: '$all?: boolean;'
-    return:
-      type:
-      - boolean
-- uid: visio.Visio.Interfaces.DocumentViewLoadOptions.disableHyperlinks
-  summary: >-
-    禁用超链接。
+      \[[API 集: 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]
+    name: disableHyperlinks
+    fullName: disableHyperlinks
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'disableHyperlinks?: boolean;'
+      return:
+        type:
+          - boolean
+  - uid: visio.Visio.Interfaces.DocumentViewLoadOptions.disablePan
+    summary: |-
+      禁用平移。
 
+      \[[API 集: 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]
+    name: disablePan
+    fullName: disablePan
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'disablePan?: boolean;'
+      return:
+        type:
+          - boolean
+  - uid: visio.Visio.Interfaces.DocumentViewLoadOptions.disablePanZoomWindow
+    summary: |-
+      禁用 PanZoomWindow。
 
-    \[[API 集： 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]
-  name: disableHyperlinks
-  fullName: disableHyperlinks
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'disableHyperlinks?: boolean;'
-    return:
-      type:
-      - boolean
-- uid: visio.Visio.Interfaces.DocumentViewLoadOptions.disablePan
-  summary: >-
-    禁用平移。
+      \[[API 集: 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]
+    name: disablePanZoomWindow
+    fullName: disablePanZoomWindow
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'disablePanZoomWindow?: boolean;'
+      return:
+        type:
+          - boolean
+  - uid: visio.Visio.Interfaces.DocumentViewLoadOptions.disableZoom
+    summary: |-
+      禁用缩放。
 
+      \[[API 集: 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]
+    name: disableZoom
+    fullName: disableZoom
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'disableZoom?: boolean;'
+      return:
+        type:
+          - boolean
+  - uid: visio.Visio.Interfaces.DocumentViewLoadOptions.hideDiagramBoundary
+    summary: |-
+      隐藏关系图边界。
 
-    \[[API 集： 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]
-  name: disablePan
-  fullName: disablePan
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'disablePan?: boolean;'
-    return:
-      type:
-      - boolean
-- uid: visio.Visio.Interfaces.DocumentViewLoadOptions.disableZoom
-  summary: >-
-    禁用缩放。
-
-
-    \[[API 集： 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]
-  name: disableZoom
-  fullName: disableZoom
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'disableZoom?: boolean;'
-    return:
-      type:
-      - boolean
-- uid: visio.Visio.Interfaces.DocumentViewLoadOptions.hideDiagramBoundary
-  summary: >-
-    隐藏图边界。
-
-
-    \[[API 集： 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]
-  name: hideDiagramBoundary
-  fullName: hideDiagramBoundary
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'hideDiagramBoundary?: boolean;'
-    return:
-      type:
-      - boolean
+      \[[API 集: 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]
+    name: hideDiagramBoundary
+    fullName: hideDiagramBoundary
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'hideDiagramBoundary?: boolean;'
+      return:
+        type:
+          - boolean
